--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,17 +1,15 @@
 ---
-title: 七哥对媒体的理解（二）
+title: 七哥对媒体的理解（一）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906008/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906044/)
 
 整理：雅典娜速记组
 编辑：tianzhihuan
 
-刚才你没有回答我的问题，为什么十大媒体这要采访我都拒绝了？答案非常简单啊，10家媒体来采访这个龙头的事情，最后一定记住，我们会发生10家媒体的大战。
+没有任何媒体是说人好话的，几乎不可能，能出来说你好话的只有2个结局啊，说你好话，人死了说你两句好话是吧？ ！还有一个顺便说你好话来证明别人啊。想说别人的坏话的同时还证明说（你）好话，没有人这样，这怎么要求呢？媒体哪有是好东西，哪有说好话的，我只要它传播就可以，它这个只要传播，共产党它把龙头啊变成了龟头，变成了鸟头，它就行了。说我什么国际通缉犯的什么还。刚才还说它播蛇妖闫呢，它播蛇妖闫是因为我们把它弄成蛇妖闫呢, 人家世界上并没有，我们把她干掉了，她甚至撒谎，我们并没有大致揭发她，这都是个客观的看待，不要（只）是要求人，一个电台都和你一样，这就是我们身上很大的病啊，就是我们新中国联邦现在就有个毛病，只要说我不好的，都是我敌人，只要不和我想法一样的，都是我的敌人，只要不按照我要求办的，都是我敌人。川普没发布戒严令川普，川普该死，川普没有这个抓拜登，川普窝囊，拜登没抓川普，拜登窝囊，你用你这种想法的话，那世界上在那不早就乱套了嘛，啊，在你世界上只有一种人，黑和白要（嘛）白存在，要么黑存在，黑白是永远相互存在的，黑天和白夜永远是在的，就是特别是人家媒体说你不好，你就只能夸你好，像你们夸七哥，要么七哥夸的简直是是吧？那，那就不叫媒体了。
 
-它一定会说你坏话，同时也打破了传播目的，为啥我不接收呢？不到时候，就这一句话，不到时候，什么时候到时候盘古要变成火龙了，都检查完了，这个什么都检查完了，这个什么管道都没问题了。变成火龙的时候，那个时候我是我该说话了，它一定会说这是郭文贵干的啊。在美国控制了，把龙变成了火龙，那个绝对会成为全世界最大的（新闻）。
-
-到底世界上存不存在的第三方力量？到底有没有外星人？小王子最关心的外星人，还有我们的小飞侠最关心的有没有外星人啊？这都会给你给你答案。另外一个会告诉你共产党它到底是一个无神论党还是有神论党？它打压宗教到底是假的是真的？它为什么打压其他宗教？无神论的时候，它要装神弄鬼？第3个会证明倒是把裕达的佛手要成为火手，它为什么会同时爆发？ 然后它栽赃我的时候，到时候看看到底是新中国联邦干的还是天意干的。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/七哥对媒体的理解（二）-.jpg)
+就是日本的报道，它被共产党给黑掉。马上说你给我关了，就说明对共产党来讲，它不是好事啊是吧？我们要有一个有一个基本的判断，接受得了别人说反话，能听进去不同的话，关键的问题，你可以说我99.9都可以骂我攻击我，你只要说一句话管用的都行。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/七哥对媒体的理解（一）-1-1.jpg)
 发布： *tianzhihuan*
 
 更多资讯，请关注：
