--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,26 +1,29 @@
 ---
-title: 宇宙无限大 地球一粒沙 彭帅在哪里？
+title: 2021年新生儿少174万 公安部打脸统计局
 ---
-`帕米尔高原水` [轉載自GNews](https://gnews.org/zh-hans/1905906/)
+`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/1905927/)
 
-作者：Aiolis
+素材：波士顿五月花 黄金时代
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/112203-1.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1_1UP21R3_0.jpg)图片来自网络
 
-图片来自网络
+1月24日，公安部户政管理研究中心发布《2021年全国姓名报告》。报告透露：截至2021年12月31日，2021年出生并已经到公安机关进行户籍登记的新生儿共887.3万。
 
-宇宙无限大，地球一粒沙是2018年张高丽迫使彭帅与其发生性关系而讲的话，七哥直播中曾透露为了控制彭帅，中共动用国家力量派出多路人马逼迫彭帅做符合保护名为 “国家领导人” 实则畜生不如的老杂毛们的安全及利益的所谓 “思想工作”，软硬兼施，冻结银行卡等各种措施，这些都在路上。
+前几日，国家统计局发布数据，2021年出生人口1062万人，比2020年少生138万，人口出生率为7.52‰，创下新低，完成五连降。最关键的是人口净增长只有48万，也就是说出生人口数量和死亡人口数量已经非常接近，人口负增长将提前到来。
 
-在中共国有很多的张高丽，更有无数的彭帅如行尸走肉一般的活着，随时处于可能被消失的境地。
+有人说，全国户籍新生儿数量之所以比统计局的数据要少174.7万，是因为很多人都是孩子满月以后再上户口 ，由于登记户口存在延迟，所以出生人口数量要少一些。
 
-1月23日澳大利亚公开赛的观众中亲彭帅的粉丝穿着 “彭帅在哪里” 的衣服，遭到阻拦，同时澳大利亚网球协会告诉ESPN，[“根据我们的门票条件，我们不允许商业或政治服装、横幅或标志。” “ 彭帅的安全是我们最关心的问题。我们继续与WTA和全球网球界合作，寻求更清楚地了解她的处境，并将尽我们所能确保她的福祉。”](https://twitter.com/MattWalshMedia/status/1485052235251957760?s=20)
+这一说法立马得到其它人的纠正。因为，按历年的情况，都存在延迟上户口的情况。这个数据更能代表一年的出生人口，前后一年出生多登记、少登记的基本差不会太多。
 
-可以看出澳大利亚网球协会是用政治的官话应对真正关心彭帅的粉丝或者说真正关心彭帅的人，非常简单的一个道理，要找到彭帅，只能找中共，这事爆料革命给出了答案。合作方是否是CCP的渗透一方，也未可知。而当观众从生命的角度，从人性的角度去寻找彭帅要知道她在哪里，这时澳大利亚网球协会以干涉政治为由发出各种阻挠，和CCP一个尿性，丧失人性和关怀，这是网球运动的耻辱，这些服务政治的官员，毫无对生命的尊重，更无对运动精神的捍卫，很难说他们不是BGY后的笑话！
+参考链接：
 
-参考链接: 
-[https://justthenews.com/world/asia/australian-open-tells-fans-change-shirts-supporting-peng-shuai-tennis-star-disappeared](https://justthenews.com/world/asia/australian-open-tells-fans-change-shirts-supporting-peng-shuai-tennis-star-disappeared)
+1、[新生儿少174万 公安部打脸统计局 公布户籍新生儿数](https://www.timednews.com/article/2022/01/24/13909.html)
 
-发稿：*Hong*
+2、[2021年户籍新生儿887.3万，男孩比女孩又多了48万，娶老婆更难了](https://www.sohu.com/a/518813737_100120495)
+
+* * *
+
+*编辑 /发布：吐纳*
 
  
 
