--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,54 +1,26 @@
 ---
-title: 前国务次卿基思·克拉奇:中共国 的入侵意在恐吓台湾，和检验美国和自由世界的决心
+title: 宇宙无限大 地球一粒沙 彭帅在哪里？
 ---
-`美国政要直译推` [轉載自GNews](https://gnews.org/zh-hans/1905781/)
+`帕米尔高原水` [轉載自GNews](https://gnews.org/zh-hans/1905906/)
 
-前国务次卿基思·克拉奇： [#中共国](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E5%9B%BD?src=hashtag_click) 的入侵意在恐吓台湾，和检验美国和自由世界的决心。正如卫报文中所说，我在访台期间就已直接看到了这一点。但是习是个恶霸，美国台湾和我们的盟国将会继续坚持我们的立场。 【转卫报，10月以来，中共国派出最大规模战机进入台湾防区】
+作者：Aiolis
 
+![](https://assets.gnews.org/wp-content/uploads/2022/01/112203-1.jpg)
 
+图片来自网络
 
-> China’s incursions are meant to intimidate Taiwan and test the resolve of the US and the free world. As the [@guardian](https://twitter.com/guardian?ref_src=twsrc%5Etfw) article notes, I saw this firsthand during my visit. But Xi is a bully and US, Taiwan, and our allies will continue to stand our ground. [https://t.co/8Ik10EuKjV](https://t.co/8Ik10EuKjV)
-> — Keith J. Krach (@KeithJKrach) [January 24, 2022](https://twitter.com/KeithJKrach/status/1485596189588443142?ref_src=twsrc%5Etfw)
+宇宙无限大，地球一粒沙是2018年张高丽迫使彭帅与其发生性关系而讲的话，七哥直播中曾透露为了控制彭帅，中共动用国家力量派出多路人马逼迫彭帅做符合保护名为 “国家领导人” 实则畜生不如的老杂毛们的安全及利益的所谓 “思想工作”，软硬兼施，冻结银行卡等各种措施，这些都在路上。
 
+在中共国有很多的张高丽，更有无数的彭帅如行尸走肉一般的活着，随时处于可能被消失的境地。
 
+1月23日澳大利亚公开赛的观众中亲彭帅的粉丝穿着 “彭帅在哪里” 的衣服，遭到阻拦，同时澳大利亚网球协会告诉ESPN，[“根据我们的门票条件，我们不允许商业或政治服装、横幅或标志。” “ 彭帅的安全是我们最关心的问题。我们继续与WTA和全球网球界合作，寻求更清楚地了解她的处境，并将尽我们所能确保她的福祉。”](https://twitter.com/MattWalshMedia/status/1485052235251957760?s=20)
 
-比尔.格茨： 随着俄罗斯与乌克兰对峙紧张局势加剧，中国加强战机侵袭台湾附近 【附比尔.格茨华盛顿时报最新报道：中国加强战机侵袭台湾附近】
+可以看出澳大利亚网球协会是用政治的官话应对真正关心彭帅的粉丝或者说真正关心彭帅的人，非常简单的一个道理，要找到彭帅，只能找中共，这事爆料革命给出了答案。合作方是否是CCP的渗透一方，也未可知。而当观众从生命的角度，从人性的角度去寻找彭帅要知道她在哪里，这时澳大利亚网球协会以干涉政治为由发出各种阻挠，和CCP一个尿性，丧失人性和关怀，这是网球运动的耻辱，这些服务政治的官员，毫无对生命的尊重，更无对运动精神的捍卫，很难说他们不是BGY后的笑话！
 
+参考链接: 
+[https://justthenews.com/world/asia/australian-open-tells-fans-change-shirts-supporting-peng-shuai-tennis-star-disappeared](https://justthenews.com/world/asia/australian-open-tells-fans-change-shirts-supporting-peng-shuai-tennis-star-disappeared)
 
-
-> China steps up warplane incursions near Taiwan as tensions mount over Russia-Ukraine standoff [https://t.co/FY7nh1SaqL](https://t.co/FY7nh1SaqL)
-> — Bill Gertz (@BillGertz) [January 24, 2022](https://twitter.com/BillGertz/status/1485755675116326913?ref_src=twsrc%5Etfw)
-
-
-
-参议员瑞克·斯科特： 多年来，我一直要求因种族灭绝和对民主的攻击追责 [#共产主义中国](https://twitter.com/hashtag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89%E4%B8%AD%E5%9B%BD?src=hashtag_click)。今天，我们展示了美国是一个无悔的人权倡导者，不怕大声揭露这些虐待行为，并为那些共产主义中国试图压迫的人发声以及今天与我们一起谴责共产主义中国对维吾尔穆斯林的种族灭绝以及在香港和西藏的罪行的所有人。我们将永远不会停止为自由和民主而战
-
-
-
-> For years, I’ve been demanding accountability for Communist China’s genocide & attacks on democracy. Today, we showed that the U.S. is an unapologetic advocate for human rights, unafraid to call out these abuses & give a voice to those who Communist China seeks to oppress. (1/2) [pic.twitter.com/IZtDjJ8fvN](https://t.co/IZtDjJ8fvN)
-> — Rick Scott (@SenRickScott) [January 24, 2022](https://twitter.com/SenRickScott/status/1485738281656537093?ref_src=twsrc%5Etfw)
-
-
-
-参议员瑞克·斯科特： 参议员里克·斯科特与人权活动人士主持举行新闻发布会，强调 [#中国共产党](https://twitter.com/hashtag/%E4%B8%AD%E5%9B%BD%E5%85%B1%E4%BA%A7%E5%85%9A?src=hashtag_click) 在 2022 年北京冬奥会之前犯下的可怕的侵犯人权和种族灭绝罪行。 【附斯科特参议员官网新闻】
-
-
-
-> Sen. Rick Scott hosts a press conference with human rights activists to highlight the horrific human rights abuses & genocide committed by the Chinese Communist Party ahead of the 2022 Winter Olympic Games in Beijing. [https://t.co/6Fu2YktpZi](https://t.co/6Fu2YktpZi)
-> — Rick Scott (@SenRickScott) [January 24, 2022](https://twitter.com/SenRickScott/status/1485708487913054213?ref_src=twsrc%5Etfw)
-
-
-
-众议员帕特·法隆： 当世界关注俄罗斯对乌克兰的潜在入侵时，习近平正在积极威胁我们在台湾的朋友。 如果你认为中国不会利用乌克兰边境的局势，那你就错了。 （转CBS新闻：中国在一天之内派出39架战机进入台湾防空识别区）
-
-
-
-> As the world's focus is on a potential Russian incursion of Ukraine, Xi Jinping is actively threatening our friends in Taiwan. 
-> 
-> If you think China isn't going to take advantage of the situation on the Ukrainian border, you're wrong.[https://t.co/pKLwrhpP6P](https://t.co/pKLwrhpP6P)
-> — Rep. Pat Fallon (@RepPatFallon) [January 24, 2022](https://twitter.com/RepPatFallon/status/1485647782342008834?ref_src=twsrc%5Etfw)
-
-
+发稿：*Hong*
 
  
 
