--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,41 +1,24 @@
 ---
-title: 七哥和新中国联邦必将让世界找到病毒真相停止疫苗灾难
+title: 七哥接受无良媒体的原因
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1906036/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906126/)
 
-G-TV视频链接：[https://gtv.org/video/id=61ef3bef87664c47acd98373](https://gtv.org/video/id=61ef3bef87664c47acd98373)
+整理：雅典娜速记组
+编辑：tianzhihuan
 
-**郭文贵先生**：关于溯源的问题，刚才Alice问的这个，一定会溯源的，你不管他谁怎么勾兑，你放心有七哥在，有新中国联邦在。我每天给你们祈福的时候，知道吗？我从2020年病毒开始我祈福中，你看越来时间越长，因为内容越来越多，其中一条祈求万佛万神给七哥力量找到病毒真相，停止疫苗灾难。
+就像那个VICE采访我一年是吧？我当时就说，我说你采访我一 年，我都拒绝你是吧，是吧，你想为啥拒绝你？因为你就是个骗子，我现在为啥我要（接受）采访啊？
 
-而且有七哥、有新中国联邦在，你放心一定会找到病毒的真相，一定会停止疫苗灾难，当然得溯源了。七哥和新中国联邦的力量你们真的不知道，就现在像Rosemary后边的宇宙（背景），她就爱玩宇宙，宇宙里边的背景一样，那是巨大的。
+我就是让你骗我，这是揭发你这个骗子，我不能让你一个人说话，我一个人反击是多么无力，我要跟它一起来反击当场较量, 结果它采访了上一两个小时，只用了3分钟，而且它犯了无数的大错，种族歧视、种族挑拨，然后尝试制造恐怖主义，甚至可能导致人道大灾难、种族大屠杀，编辑虚假骗取新闻，这一 切都发生了，但是我是在它4年前要采访我，4年前你们造假黑我，所以今天我放摄像机对吧？摄像机干啥的？
 
-字幕来源：[2022年1月19日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1885617/)
+摄像机就是揭穿你的谎言，直接告诉她，就这都挡不住她执行任务啊，她都要采访啊，她还有侥幸心理呢。所以你看这个东西，它这10家一定会来的。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/七哥接受无良媒体的原因-.jpg)
+发布： *tianzhihuan*
 
-编辑整理：Jacques；
-
-字幕文件制作：小满；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
