--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 年轻人学习之余结识高人和宗教信仰的人
+title: 穷人的孩子早当家
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906026/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906062/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
