--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,29 +1,38 @@
 ---
-title: 2021年新生儿少174万 公安部打脸统计局
+title: 美国国务院敦促美国公民避开俄罗斯
 ---
-`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/1905927/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1905943/)
 
-素材：波士顿五月花 黄金时代
+#### **【雅典娜快讯】。紧贴时代脉搏**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1_1UP21R3_0.jpg)图片来自网络
+整理报道：文扬
+编辑：文泓
 
-1月24日，公安部户政管理研究中心发布《2021年全国姓名报告》。报告透露：截至2021年12月31日，2021年出生并已经到公安机关进行户籍登记的新生儿共887.3万。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/E8R84KRFSL04RC964E.png)图片来源：ATN News
 
-前几日，国家统计局发布数据，2021年出生人口1062万人，比2020年少生138万，人口出生率为7.52‰，创下新低，完成五连降。最关键的是人口净增长只有48万，也就是说出生人口数量和死亡人口数量已经非常接近，人口负增长将提前到来。
 
-有人说，全国户籍新生儿数量之所以比统计局的数据要少174.7万，是因为很多人都是孩子满月以后再上户口 ，由于登记户口存在延迟，所以出生人口数量要少一些。
+当地时间1月24日，据RT电视台报道，美国国务院周日表示，由于目前的乌克兰危机、新冠疫情以及可能的“俄罗斯政府安全官员的骚扰”等原因，美国人应该避免去俄罗斯访问旅行。
 
-这一说法立马得到其它人的纠正。因为，按历年的情况，都存在延迟上户口的情况。这个数据更能代表一年的出生人口，前后一年出生多登记、少登记的基本差不会太多。
+该机构发布了“请勿旅行”的咨询信息，并指出（届时）美国政府“提供常规或紧急服务”的能力受到严重限制。
 
-参考链接：
+国务院的指导意见指出：“由于俄罗斯在与乌克兰接壤的边境地区加强了军事存在并正在进行军事演习，正在当地或考虑前往紧邻乌克兰的俄罗斯联邦地区的美国公民应该知道，该边境地区的局势是不可预测的，紧张局势正在加剧”。该意见还指出存在恐怖主义、骚扰和“当地任意执法”的潜在风险。
 
-1、[新生儿少174万 公安部打脸统计局 公布户籍新生儿数](https://www.timednews.com/article/2022/01/24/13909.html)
+由于俄罗斯军事行动和新冠疫情威胁增加，华盛顿还将乌克兰列入“禁止旅行”名单。美国外交官的家属已被勒令离开乌克兰，而一些使馆工作人员被授权在“自愿”的基础上离开。
 
-2、[2021年户籍新生儿887.3万，男孩比女孩又多了48万，娶老婆更难了](https://www.sohu.com/a/518813737_100120495)
+这次美国的警告，是在俄罗斯和乌克兰之间的紧张局势仍处于历史高位时发出的。最近几个月，西方媒体和政治家指责莫斯科在与乌克兰的边界上集中了军队和军事装备，据悉是为了在不久的将来发动进攻。
 
-* * *
+克里姆林宫一再否认这些说法，称俄罗斯只是在其境内调动其武装力量，有关攻击的报道毫无根据。
 
-*编辑 /发布：吐纳*
+原文链接： [Washington urges US citizens to avoid Russia — RT Russia & Former Soviet Union](https://www.rt.com/russia/547062-washington-urges-avoid-traveling-moscow/)
+
+发布：tianzhihuan
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
