--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,15 +1,23 @@
 ---
-title: 有声&#124;荷兰光刻机大厂抓出中共内鬼取销中共订单
+title: 有声&#124;新罕布什尔州寻求立法将伊维菌素作为中共病毒的替代疗法
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1905679/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1905708/)
 
 配音：香草山健身部 – 玫瑰园
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-当地时间1月21日，郭文贵先生在大直播中谈到中共在发展晶片产业上遭受重大挫败。 其中爆料革命战友发挥了重要的关键角色。
 
-中共多年前利用蓝金黄方式收买了荷兰光刻机大厂艾司摩尔派驻到中共的工程师。 中共女间谍与其结婚生子，借此方式进行渗透。 这些真相经由战友提供给艾司摩尔公司，并经过英国情报部门的证实，终于让该公司警觉到中共的渗透。同时在美国的施压下，荷兰政府拒绝授予艾司摩尔出口先进光刻机系统许可证，最终取消了中共先前超越市场行情的高价订单。
 
-原文链接：[荷兰光刻机大厂抓出中共内鬼取销中共订单](https://gnews.org/zh-hans/1898269/)
+
+![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
+
+
+
+1月19日，美国众议院卫生、公众服务和老年事务委员会草拟一项法案，新罕布什尔州有望成为美国第一个批准将伊维菌素作为中共病毒保护性治疗的州。
+
+新罕布什尔州法案的主要发起人表示，她希望稍加修正的版本能够获得共和党多数派委员会的足够票数，来得到众议院批准。 目前，众议院已经对其他与中共病毒有关的法案表示了支持，包括在全州范围内禁止政府和私人实施与该病毒有关的强制措施。
+
+神经重症监护医生保罗·马里克博士引用世界卫生组织的数据指出，自伊维菌素作为一种抗寄生虫药物以来，已经向人类发放了37亿剂，伊维菌素是这个星球上最安全的药物之一。 目前，人用伊维菌素已经在79个国家被批准用于治疗中共病毒。
+
+原文链接：[新罕布什尔州寻求立法将伊维菌素作为中共病毒的替代疗法](https://gnews.org/zh-hans/1901680/)
 
 音频处理/发稿：Daxia
 
