--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,9 +1,9 @@
 ---
-title: 日本327家托儿所因中共病毒疫情关闭
+title: 加拿大卡车司机驾车游行抗议中共病毒疫苗强制令
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1905605/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1905609/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1._25-scaled.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/20220125-scaled.jpg)
 *编辑：东京樱花团/简报小组
 发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
