--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,17 +1,29 @@
 ---
-title: 韩国中共病毒确诊病例首次超8000，创历史新高
+title: 美国就《防止强迫维吾尔人劳动法》征求公众意见
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1905582/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1905604/)
 
-撰稿：追着曙光跑
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Unknown-36.jpg)美国就《防止强迫维吾尔人劳动法》征求公众意见 网络图片
+据美国之音1月25日报道，美国国土安全部24日就实施《 防止强迫维吾尔人劳动法》征求公众意见，以便继续禁止在中共国、包括在新疆通过强迫劳动生产的产品进口到美国。公众有45天的时间提出他们的看法。在收到公众评论后，强迫劳动执行特别工作组将举行一次公开听证会，并制定一项实施战略。美国海关和边境保护局将发布进口商需遵循的指导原则。
 
-据韩国《KBS新闻》1月25日的报道，截至当天0时，韩国较前一天0时新增感染中共病毒（新冠病毒）确诊病例8571例，创历史新高。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/WhatsApp-Image-2022-01-25-at-10.31.58.jpeg)图片来源：原新闻视频截图
-其中，京畿道确诊病例最多，为2900例；首尔确诊病例1700例，仁川确诊病例670例；全国累计确诊74.9979万例。当天新增23例死亡病例，累计6588例，平均致死率为0.88%。现有重症患者392例，较前一天减少26例。另外，全国约有3.2万人在家接受治疗。
+去年12月，《防止强迫维吾尔人劳动法》获得国会两党和参众两院的一致通过，拜登总统随后将其签署成法。该法案在签署令后180天正式生效。该法案禁止新疆产品进口美国，除非企业能提供明确且令人信服的证据，证明产品非由强迫劳动制造。
 
-上周奥米炕（Omicron）突变已成为流行毒株，在新增确诊病例中，奥米炕感染病例占比为50.3%。考虑到奥米炕的传染率是德尔塔毒株的两倍多，专家预测本周内韩国新增确诊病例将超过10,000例。
+中共在新疆犯下的种族灭绝和反人类罪，人神共愤。新法案将会加快美中经济脱钩，并对全球供应链造成影响。但是中共的罪行不能继续容忍，新疆的人权问题不能再被忽视。
 
-新闻来源：**[코로나19 신규 확진 8,571명…내일부터 오미크론 방역체계 전환](https://news.kbs.co.kr/mobile/news/view.do?ncd=5380555)**
+新闻参考链接：[https://www.voachinese.com/a/DHS-forced-labor-act-xinjiang-20220124/6410579.html](https://www.voachinese.com/a/DHS-forced-labor-act-xinjiang-20220124/6410579.html)
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+
+
 
  
 
