--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 穷人的孩子早当家
+title: 不乎别人怎么看
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906062/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906158/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
