--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥谈哲学（四）
+title: 七哥谈人生规划（一）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906426/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906439/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
