--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥谈哲学（一）
+title: 七哥谈哲学（四）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906340/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906426/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
