--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,21 +1,15 @@
 ---
-title: Higginbotham与崔天凯勾结证据创造美国司法部第一案
+title: 不要溢出效应就是让西方别把中共的钱戳成纸以奴役人民
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1906577/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1906644/)
 
-G-TV视频链接：[https://gtv.org/video/id=61ef402487664c47acd98547](https://gtv.org/video/id=61ef402487664c47acd98547)
+G-TV视频链接：[https://gtv.org/video/id=61ecf1b087664c47acd8ad8f](https://gtv.org/video/id=61ecf1b087664c47acd8ad8f)
 
-**郭文贵先生**：我们要利用这个官司灭掉共产党在西方司法界，就像Higginbotham司法部的官司一样，把他们给灭掉，哪天我给你们讲讲Higginbotham是怎么被抓起来的，我要跟你们讲那比好莱坞电影还传奇。
+**郭文贵先生**：今天我再告诉大家，所谓的“溢出效应”是啥意思？就是村长家里边，把这一村人给绑架了，或者村长在茅屎坑里边在拉屎，你把一个石头扔到茅屎坑里边溅他一身，现在村长就干啥事？你只要敢不听我的，我就把这屎糊到你们全世界去。
 
-我跟你讲其中一个段落，突然间有个记者跟我联系，说郭先生我给你提供一件事情，你能不能帮我个忙，我说可以，我要王岐山在什么、什么、什么证据，你只要发给我，我给你保证，我会让你知道有一个人正在司法部要把你遣返，这是2017年的事。
+共产党达沃斯论坛印的钞票太多了，美国要加息，因为美国的美元人家是全世界通行，到现在中国人不知道美元是全世界通行、中国人民币全世界不通行。我告诉你们，你们想想，Rosemary你不知道，你去问中国人，97%的人不知道中国的人民币不是全世界通用的原因，就是人民币你只能在中国花，到外国叫外币，是限制你（使用），全人类只有北朝鲜，连非洲都不这样，就你的钱就是纸。
 
-刚开始爆料革命，他说我相信你，我也可以先发给你，或者你先发给王岐山。我二话没说，我说你等着，不用放电话，我打开保险柜，我发了10页文件过去。哇塞我说这哥们傻了，Miles Guo你真讲信用，比我认识的中国人讲信用。
-
-你等着你也别放电话，“吧唧”给我来几页文件，我英文看不懂是不是？麻烦了，我给他发了是英文他看得懂，他给我发的我看不懂。我说我得找翻译一下，他说你看完以后再给我打过来，我一看傻了就翻译。
-
-哇塞Higginbotham是谁呀？还给崔天凯有联系？还发EMAIL？约见面？告诉车号？我车已经到了？我得躲开，我在司法部刚出来，然后这个目标郭，我们已经把文件送到白宫了。
-
-哇塞，我说这事大啊，二话还没说直接发给我们的沼泽地朋友，我说我只要求你一样，让所有当事人都知道这几份文件，结果后来不到40小时听说这哥们就被抓了，创造了美国历史上第一个司法部被外国势力控制的案。
+那现在什么叫溢出效应呢？就是我印的钞票太多了，你现在一加息，人家美元是全球流通，它自己的泡沫就挤出来了，一挤出来，它的钱变纸了。你要叫我继续奴隶我的中国14亿人民，所谓的比爹娘还亲的共产党，就是你不能把我的钱变成纸，我要继续奴隶他们。
 
 字幕来源：[2022年1月19日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1885617/)
 
