--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,40 +1,53 @@
 ---
-title: 慈悲医院因患者未打疫苗不予有效及时治疗而导致其去世
+title: 回顾河南水灾幸存者被采访视频，周围维稳言论引群嘲
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1906413/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1906504/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2041.png)图片来源：Red Voice Media Scott Quiner和妻子，Stew Peters
-斯科特原是明尼苏达州Coon Rapids市慈悲（Mercy）医院的一名新冠患者，慈悲医院根据医院指定的治疗方法将斯科特置于呼吸机上，并给予他镇静药物。家属恳求医院尝试其它方法，例如伊维菌素，羟氯喹，以及增加维生素和营养，试图挽救他的生命，而医院拒绝，也不允许病人出院，并要拔掉呼吸机。
-
-经过明州媒体名人Stew Peters （盖特账号@RealStew Peters）在社交媒体上的呼吁和很多人的关注，经过律师介入诉讼和法庭判决后，病人最终得以从慈悲医院转到德克萨斯州一家愿意提供治疗的医院。到了德州医院，医生们说斯科特是他们见过的最营养不良的病人。 这与家属所说的慈悲医生拒绝给他适当的维生素来帮助对抗病毒的说法是一致的。 他的其他器官工作正常，但他的肺有重大问题。
-
-Stew说，“斯科特遭遇了慈悲医院的撒旦杀手所造成的可怕伤害，他们虐待、毒害和折磨斯科特，因为他们惩罚他没有接种疫苗。 得克萨斯州的医生确信，慈悲医院对斯科特造成的致命伤害是他死亡的全部原因，如果他几周前到达德克萨斯州，斯科特就会完全康复。”
-
-这完全是一场可避免的悲剧，如果斯科特在慈悲医院能得到有效的治疗，而非因未打疫苗遭受虐待，如果斯科特能早点离开慈悲医院转到德州医院，他不会这样悲惨离世。
-
-* * *
-
-参考资料：
-
-- Avoidable Tragedy: Scott Quiner Dies Due To Maltreatment At Mercy Hospital
-JANUARY 22, 2022
-[https://www.redvoicemedia.com/2022/01/avoidable-tragedy-scott-quiner-dies-due-to-maltreatment-at-mercy-hospital/](https://www.redvoicemedia.com/2022/01/avoidable-tragedy-scott-quiner-dies-due-to-maltreatment-at-mercy-hospital/)
+作者：日本方舟农场 – Andy5
 
 
-- Stew Peters’ Viewers Create Temporary Victory In Scott Quiner Case- Mercy Hospital Ordered To Not Kill Him
-JANUARY 13, 2022
-[https://www.redvoicemedia.com/2022/01/stew-peters-viewers-create-temporary-victory-in-scott-quiner-case-mercy-hospital-ordered-to-not-kill-him/](https://www.redvoicemedia.com/2022/01/stew-peters-viewers-create-temporary-victory-in-scott-quiner-case-mercy-hospital-ordered-to-not-kill-him/)
+
+![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
 
 
-文章观点仅代表作者个人，与gnews平台无关
 
-作者：洛杉矶盘古农场 — 郭友（文苏）
-编审：洛杉矶盘古农场 — 心照
-发布：洛杉矶盘古农场 — Kevin37L
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+当地时间1月21日，中共以承认郑州水灾的死亡数字存在瞒报，并处理了郑州市委负责人，同时不忘歌颂习的正确指挥，草草了事为郑州水灾人祸画上句号。这种草菅人命，以惩罚地方而歌颂中央的处理形式，引发不满。
 
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+22日，有网友在社交平台上发出了当时（7月底）幸存者本想向记者叙述的事实，却被中共维稳人员干扰，不得不中断的采访视频引发墙内网友群嘲。
+
+特别是针对该位维稳人员的“全面介绍，不要抹黑”，有网友评论道“为什么要强调不要抹黑，而不是提醒实事求是说明情况？”
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide14-2.jpg)
+还有因为该维稳人员数次追问记者是否是外媒，而引起网友质问“究竟是事实可怕还是外媒可怕？”更有网友将郑州水灾的瞒报，关联到中共在2003年非典和2019年年末中共病毒爆发后的瞒报。
+
+分析人士指出，正如中共喉舌胡锡进曾在去年7月称郑州水灾不存在瞒报，而被事实打脸一样，中共在病毒、拉闸限电、粮食供给等一系列事件中的表现，都只会加速墙内百姓认清中共本质的速度。
+
+参考信息：
+1. [潘嘉比的微博视频](https://weibo.com/tv/show/1034:4728206188806277?from=old_pc_videoshow) (视频+弹幕+视频下的留言评论)
+2. [河南郑州“7·20”特大暴雨灾害调查报告公布](http://www.gov.cn/xinwen/2022-01/21/content_5669723.htm) (CCP处理郑州官员而歌颂习的通告)
+3. [胡叼盤在鄭州人禍水災後說什麼來著？](https://www.gettr.com/post/pq8pj30e35)
+4. [抹黑郑州抗灾的国外记者被民众活捉，该赶走所有境外造谣媒体了](https://www.sohu.com/a/479794937_120044037)
+5. [维基百科 -蒋彦永](https://zh.wikipedia.org/wiki/%E8%92%8B%E5%BD%A6%E6%B0%B8)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-2.jpg)
+
+总编/编辑：DM
+校对/发稿：为真不破20
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+
+
+![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
 
 
 
