--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,27 +1,18 @@
 ---
-title: 无限发展空间的H冷热钱包
+title: 七哥谈人生规划（四）
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1906595/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906687/)
 
-**【郭先生直播摘要】 2022.1.21 无限发展空间的H冷热钱包**
+编辑/整理：澳雅大直播工作组视频剪辑小队
 
-**郭先生：**
+*发布：*Frank2021
 
-你没有任何人看出喜联储, 还有咱们未来的喜币，躺平币下一步在中国（怎样），没有人搞明白，战友使用盖特 GTV 、Gnews，即金钱。就你在手机上待了10个小时，就应该得到多少币自动就给你。
-
-那我咋用啊？我在福建武夷山一农民。我养蛇的农民。武夷山养蛇的多。那我咋花呀？有喜支付，还有盖特支付。你可以在你范围内一找。有卖啥的？ 又有卖双修药的？你只要找到他，你就发信息。咱都是喜支付的人是吧？对方就认可了，找到你了啊。叫政清就在我离我100公里，想买双修的药哎我有。咱俩一对接就完了没有中间商。说我想我想买点大米饼子，我想买点包子，找找周围有没有？周围有的哎。我接受我就买了。完全不通过（其他）。为什么？天空 wifi，已经脱离了当地的通信控制你，你找不着我。
-
-第二个，我的数字货币是去中心化的货币，你找不着人。
-
-第三我有热钱包冷钱包是吧？很多大家商家准备了冷钱包。我下载完我就放我冷钱包了。我冷钱包我干啥去， 我进来批发的双修药卖给你。是不是我就拿冷钱包去批发去，就是在控制的共产党的范围内。我拿冷钱包玩，你找不着我。但是我跟小额的我拿热钱包支付。
-
-我玩死它共产党，你认为那老杂毛他能懂这个吗？懂这个他都是给你杀了，他不让你活着。只有七哥跟战友们这么玩他。咱们就在电脑上，这帮老杂毛都能玩死他。是吧？让他看着偷你家钱来了。我说你看着我开你家门，我开你家保险箱把钱拿走。你还找不着我。你打空气吧，你打吧使劲打。这就是咱们这个厉害。
-
-让所有共产党之后发现：哇塞，我都抓不着。偷我钱的人，还有你藏钱的方式。那我也想当这个人。我就把我的钱放到硬钱包里，到共产党的王岐山，习近平家人相信这个硬钱包。谁也查不着，谁也找不着谁抢不走的时候。（到时候）给我们做最大贡献，就是习近平的老杂毛们。（到时候）你看张高丽第一个——就是给他老婆说，宇宙无限大，地球是一粒沙——谁也别相信，只相信郭文贵，把钱放那吧。
-
-而且这个绝对让世界上你丢了我赔你，你只要买保险。如果你被哪个政府强迫弄走了，我赔你；我要买一堆的保险。这就是喜保险和它的对应。叫你永远安全不可找不可抢不可骗，永不丢。这就热钱包冷钱包你用好了，好处无穷无尽的大。
-
-视频剪辑：北方信使 | 听写：烟波浩淼 | 翻译：Arthur| 校对： Polaris | 视频制作+字幕：芥末| 编辑：小小鸟| 发布：断播
+**更多资讯，请关注：****
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
