--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,39 +1,43 @@
 ---
-title: 西安市民曝光各地捐赠食品蔬菜被官方扔掉
+title: 达沃斯参会者是共产党帮凶是冠状病毒和疫苗杀人的元凶
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1906586/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1906682/)
 
-#### **撰稿：**日本东京方舟农场 子辰
+G-TV视频链接：[https://gtv.org/video/id=61ecf26e87664c47acd8ade7](https://gtv.org/video/id=61ecf26e87664c47acd8ade7)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/3C285BEA-32FA-455E-BC10-157FF7E183C5.jpeg)图片来自《大纪元》
+**郭文贵先生**：大家要想到这三个问题的时候，你就知道了这不是达沃斯跟你没关系。达沃斯这帮孙子就是靠中国人70年的血汗和我们子孙的未来，和卖掉了我们健康的土地、砍掉了所有生存的林木，我们这才是能让他们活到今天。
 
-近期，西安当地市民曝光各地捐赠的大量食品、蔬菜被官方扔进垃圾堆。自西安市封城一个月以来，买菜难等民生问题令市民怨声载道。
+他们，能在达沃斯所有开会的人都是共产党的帮凶，是冠状病毒、今天疫苗（灾难中）希望能做到死更多人类的人，因为他们不用花成本，欠别人的钱不用还了，保险也不用给了。现在你发现全世界不光是中共国，买了人寿保险的，死了以后一概不赔。哇塞，它大爷的，存款利息不给，基金要倒闭。
 
-据大陆媒体报导，陕西省安康市民王军，1月初为西安捐赠一万个爱心白馍。据王军介绍，有十几个志愿者帮忙加工，先将第一批爱心白馍送往西安，捐赠给市民，后期还会和安康老乡一起筹备更多蔬菜等捐赠物资。
+字幕来源：[2022年1月19日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1885617/)
 
-然而，据网民近日转载的一段视频显示，安康市民为西安捐赠的白馍，1月22日被扔进垃圾桶。
+编辑整理：Jacques；
 
-这则消息引发网民愤怒。西安市官方23日对此回应，称这是当地一家店铺的饼存放发霉而扔进垃圾桶。
+字幕文件制作：小满；
 
-无独有偶，1月23日，西安市民拍摄的另一则视频显示，由各地捐赠的大量爱心蔬菜被扔进垃圾堆。
+视频制作及上传：Cindy；
 
-拍摄视频的市民说，“疫情期间吃不上菜，看看整箱整箱的菜就这样全扔了，好好的菜全扔了，这都不是人干的事嘛。”该市民还打开一箱扔掉的菜筐，拿出几个用泡沫薄膜包着的西葫芦，去掉薄膜，新鲜的西葫芦没有任何外伤。她说：“扒开看看，这西葫芦好好的，全扔了。一整箱一整箱的……这都不知道是什么地方捐过来的，箱子连打都没打开。”
+G-News发布：小满；
 
-视频中，该市民还拍摄了被扔掉的豆角等蔬菜，大概有几十箱。
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
 
-根据西安政府规定，各地捐赠物资均由当地政府部门统一协调分配。但这些物资要么被当地政府扔掉，要么烂在仓库没人管，而没有浪费的，要么被当地官员、警察、城管和社区管理人员瓜分，要么高价卖给当地市民。总之，普通市民永远无法免费获得捐赠物资。
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
-这样的情况并非只在西安出现，武汉、郑州等曾经封城的地区均有市民发布大量视频曝光这类丑闻。
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
-*参考链接：[西安市民曝各地捐贈食品蔬菜被官方扔掉](https://www.epochtimes.com/b5/22/1/23/n13524617.htm)*
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
 
-* * *
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
 
-*素材采编：子辰*
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
 
-*编辑：文顺*
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
 
-*发布：miumiu*
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
