--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,29 +1,49 @@
 ---
-title: 扬帆每日速递 2022年1月24日版（2）
+title: Higginbotham与崔天凯勾结证据创造美国司法部第一案
 ---
-`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/1906494/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1906577/)
 
-加拿大温哥华扬帆农场 海报组
-![](https://assets.gnews.org/wp-content/uploads/2022/01/封面简1.jpg)
-1、尽管一直深陷关于隐私和虚假信息的争议中，脸书母公司Meta周一宣布，它正在推出世界上最强大的超级计算机，以提高其处理数据的能力。
+G-TV视频链接：[https://gtv.org/video/id=61ef402487664c47acd98547](https://gtv.org/video/id=61ef402487664c47acd98547)
 
-2、加拿大卡车司机抗议活动Freedom Convoy 2022的众筹活动10天之内已经筹集超过300万美元，而且没有放缓的迹象。卡车车队周日从全国多个地点出发，预计将在一周内汇聚渥太华。
+**郭文贵先生**：我们要利用这个官司灭掉共产党在西方司法界，就像Higginbotham司法部的官司一样，把他们给灭掉，哪天我给你们讲讲Higginbotham是怎么被抓起来的，我要跟你们讲那比好莱坞电影还传奇。
 
-3、据文贵大直播：盛大的奥运会开幕式背后，是最邪恶的力量支撑，共产党在全世界面前拙劣的表演，对新中国联邦最有利。
+我跟你讲其中一个段落，突然间有个记者跟我联系，说郭先生我给你提供一件事情，你能不能帮我个忙，我说可以，我要王岐山在什么、什么、什么证据，你只要发给我，我给你保证，我会让你知道有一个人正在司法部要把你遣返，这是2017年的事。
 
-4、据文贵大直播：共产党是最大的邪教组织，在邪教组织6个特征之上加上第七条：篡改历史。
+刚开始爆料革命，他说我相信你，我也可以先发给你，或者你先发给王岐山。我二话没说，我说你等着，不用放电话，我打开保险柜，我发了10页文件过去。哇塞我说这哥们傻了，Miles Guo你真讲信用，比我认识的中国人讲信用。
 
-5、中国新年是中国人一年中最盛大的节日，清零政策下 许多中共国家庭被迫三年分开过年。
+你等着你也别放电话，“吧唧”给我来几页文件，我英文看不懂是不是？麻烦了，我给他发了是英文他看得懂，他给我发的我看不懂。我说我得找翻译一下，他说你看完以后再给我打过来，我一看傻了就翻译。
 
-6、习近平1月24日主持召开政治局会议，要求中央书记处带头维护党中央权威和集中统一领导，完成好党中央交办的各项任务。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/简体模板124-2_page-0001.jpg)
-素材提供战友：Revelation熙攘、文敏、从来多难不兴邦
+哇塞Higginbotham是谁呀？还给崔天凯有联系？还发EMAIL？约见面？告诉车号？我车已经到了？我得躲开，我在司法部刚出来，然后这个目标郭，我们已经把文件送到白宫了。
 
-编辑：文敏
+哇塞，我说这事大啊，二话还没说直接发给我们的沼泽地朋友，我说我只要求你一样，让所有当事人都知道这几份文件，结果后来不到40小时听说这哥们就被抓了，创造了美国历史上第一个司法部被外国势力控制的案。
 
-发布：风起云间（文敏）
+字幕来源：[2022年1月19日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1885617/)
 
-海报图片设计：飞天面、 Shuang
+编辑整理：Jacques；
+
+字幕文件制作：小满；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
