--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,49 +1,23 @@
 ---
-title: 蓬佩奥国务卿呼吁建立威慑力以减少外部威胁
+title: 谷歌侵犯个人隐私被告上法庭
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1906474/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1906567/)
 
-作者：日本方舟农场 – Andy5
+翻译：  Evalu
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2-85.jpg)
+图片来源： blog.51cto.com
 
+美联社1月24日报道，哥伦比亚地区和美国三个州因谷歌欺骗顾客，侵犯他们的隐私，使他们无法摆脱被定位被追踪的境地而被用户告上法庭。
 
+在周一华盛顿特区哥伦比亚地区法院，总检察长卡尔·瑞辛称谷歌“系统性”地欺骗顾客使得用户的位置被用于定位。他说这个互联网搜索引擎误导用户，使他们相信他们会控制谷歌收集的信息。而实际上，用谷歌产品并不能防止谷歌收集，储存和通过定位来获利。谷歌能够监视用户的每日生活。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
+德克萨斯州，印第安纳州和华盛顿州的总检察长也于周一在他们的州法院提起相似的诉讼。
 
+上周由参议院提起的两党议案将阻止互联网平台霸权，阻止谷歌，元宇宙（原名脸书），亚马逊以及苹果公司在竞争对手面前通过其优势为其谋利益。例如谷歌通常把自己的服务置于检索结果的头条。
 
+##### 新闻来源： [DC, 3 states sue Google saying it invades users’ privacy](https://apnews.com/article/technology-business-lawsuits-district-of-columbia-de23ecc89b7f113de4e8fd49cda1305c)
 
-1月23日，前国务卿蓬佩奥接受媒体采访，再次呼吁美国需要建立威慑力。在节目中，主持人担忧近期俄、中、伊朗举行的军演，中共侵扰台湾防空识别区，以及俄罗斯在乌克兰边界的屯兵，将造成各国对美国外交政策的不信任。
-
-对此，蓬佩奥表示，美国提振在国际上的威慑力是解决目前事态的唯一途径。他指出，各国都在密切关注美国政府的行为举止，而现任政府需要像川普政府一样作出“回应”，来树立美国的威慑力。同时他强调，“回应”的方式不一定是出兵引发战争，可以像川普政府斩首苏莱曼尼，以及提供武器援助等措施，来维护其他国家包括当下乌克兰的主权等措施。而最关键在于，本届政府是否有能力和决心，使用手中的各种工具。
-
-最后，蓬佩奥还在回覆中特别区分了中共领导人习近平和中国人民、台湾人民，称这两方都正在关注美国如何扮演领导角色。并且只有美国建立了威慑力，才能保证美国和世界的繁荣稳定，从根本上减少外部挑战的出现。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide11-6.jpg)
-参考信息：
-1.[20220123蓬佩奧國務卿接受FOX採訪](https://www.gettr.com/post/pq997m78fa)
-2. [俄太平洋舰队：中国 俄罗斯和伊朗将举行海上联合军演](https://mil.news.sina.com.cn/china/2022-01-18/doc-ikyamrmz5988581.shtml)
-3. [俄媒：乌中将声称俄罗斯可能在2月20日“入侵”乌克兰，莫斯科多次否认类似指控](https://world.huanqiu.com/article/46W6lf93sdd)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-2.jpg)
-
-总编/编辑：DM
-校对/发稿：为真不破20
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-
-
-
-![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
-
-
+#  
 
  
 
