--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,21 +1,30 @@
 ---
-title: 中日财经爆│“国民资产”刷新历史最高纪录达到11892万亿日元
+title: 扬帆每日速递 2022年1月24日版（2）
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1906411/)
+`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/1906494/)
 
-撰稿：东京樱花团/ haruka春香
-![](https://assets.gnews.org/wp-content/uploads/2022/01/8-19.png)[图片来源](https://news.yahoo.co.jp/articles/781b72474dbbb3e135a409ffae4454600569c338/images/000)
-据内阁部1月24日发表的国民经济核算，截至2020年末，国家、企业、个人等拥有的土地、建筑物、股票等“国民资产”余额比前一年增加4.7%，达到11892万亿日元，刷新了历史最高纪录。这是连续2年增加的趋势。
+加拿大温哥华扬帆农场 海报组
+![](https://assets.gnews.org/wp-content/uploads/2022/01/封面简1.jpg)
+1、尽管一直深陷关于隐私和虚假信息的争议中，脸书母公司Meta周一宣布，它正在推出世界上最强大的超级计算机，以提高其处理数据的能力。
 
-金融资产增加6.7%，达到8583万亿日元。这是因为中共病毒（新冠病毒Covid-19）感染扩散，企业增加了手头资金，而且由于外出限制，消费减少，导致现金积累。相反，由于企业的设备投资被抑制，非金融资产减少了0.3%，为3309万亿日元。 　国民资产中除去负债的“国家财富”（国家整体财富=净资产）减少0.3%，为3669万亿日元，时隔5年再次减少。对外净资产方面，受日元升值的影响，资产价值以日元换算下降，减少0.1%达到359万亿日元，时隔3年再次减少。
+2、加拿大卡车司机抗议活动Freedom Convoy 2022的众筹活动10天之内已经筹集超过300万美元，而且没有放缓的迹象。卡车车队周日从全国多个地点出发，预计将在一周内汇聚渥太华。
 
-信息来源：
+3、据文贵大直播：盛大的奥运会开幕式背后，是最邪恶的力量支撑，共产党在全世界面前拙劣的表演，对新中国联邦最有利。
 
-[「国民資産」４・７％増の１京１８９２兆円…過去最高を更新](https://news.yahoo.co.jp/articles/781b72474dbbb3e135a409ffae4454600569c338)
+4、据文贵大直播：共产党是最大的邪教组织，在邪教组织6个特征之上加上第七条：篡改历史。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+5、中国新年是中国人一年中最盛大的节日，清零政策下 许多中共国家庭被迫三年分开过年。
+
+6、习近平1月24日主持召开政治局会议，要求中央书记处带头维护党中央权威和集中统一领导，完成好党中央交办的各项任务。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/简体模板124-2_page-0001.jpg)
+素材提供战友：Revelation熙攘、文敏、从来多难不兴邦
+
+编辑：文敏
+
+发布：风起云间（文敏）
+
+海报图片设计：飞天面、 Shuang
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
