--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,17 +1,50 @@
 ---
-title: 【粤语配音】2022年1月24日： 甜蜜蜜运动
+title: 美日加强训练 中共军机扰台 台海再引关注
 ---
-`MOS香港部` [轉載自GNews](https://gnews.org/zh-hans/1906399/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1906475/)
 
-紐約香草山-香港部
+作者：纽约磐石农场 – 在远方， 台湾宝岛农场 – dobi
 
-所有冬奥会以后他们判断，世界人民对这个国家的好感和政治上的反应是最麻木的，它（共产党）要行动，但是七哥也有行动，七哥的行动就在北京城，记住我说的话，就在二环以内，我今天告诉大家地方，我都不去四环，四环离盘古太近了，不好意思，我就在二环以内，给它（共产党）弄点动静出来。
 
-你们会突然间听到二环以内，到处充满了歌声“在哪里..在哪里见过你，的笑容这样熟悉，啊…在梦里”全北京城都会听到这种“甜蜜蜜”暗号..暗号..
 
-这个动静你就看着七哥，会以病毒为借口的动静，而且是世界级的，绝不超过六周，我有99%的把握在冬奥会期间，整点大动静，习近平不老是做梦嘛，是吧，咱们就要在梦里梦见你，我们在梦里相见，而且伸手还摸得着，绝对是这个运动就叫“甜蜜蜜”的运动，然后你们看到了二环以内的动静..习近平就傻眼，他就明知道，呀..呀..怎么有动静了？，没办法.. 制止不了，然后就听到旁边都在唱”甜蜜蜜”，左看、右看、前看、后看、上看、下看…都在唱”甜蜜蜜”都在唱“梦里见过你”。
+![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
 
-中国的习近平，我的中国梦，怎么都变成了“甜蜜蜜”的梦了呢？到那时就热闹了，我今天就告诉你们这些老杂毛们，你张高丽会给彭帅讲故事，宇宙无限大，地球是一粒沙，今天我给你来个就在你家门口，来个“甜蜜蜜”，而且我告诉大家这个甜蜜蜜运动，就像所谓的茉莉花运动一样，你会看到很多知识分子，老师、律师、军人、音乐家、医生，很多人参加，我就让你看到郭文贵和爆料革命新中国联邦的甜蜜蜜运动，就在你二环内发起，我现在就告诉你了，如果发生我会告诉大家是世界级的，绝不亚于一场文化大革命这么大的力量，我不是给你们开玩笑，到那时候习近平他的中国梦，就成为他的中国噩梦了。
+
+
+1月23日晚，台湾空军发布共军军机动态，当日有39架共军战机，入侵台湾西南防空识别区。
+
+同日，日本海上自卫队宣布，已跟美国海军航空母舰等舰艇，在冲绳南方实施联合训练。训练自17日至22日举行，日方大型护卫舰日向号，美方卡尔文森号航母、林肯号航母、以及两栖突击舰与驱逐舰等，共10艘舰艇参加了演练。
+
+分析认为，美日军演，是针对中共此前对台湾的威胁开展武力威慑；而中共此次扰台机群武力并非最强，威胁程度也不是最大，应该是针对美日的联合军演表达自己不示弱的态度。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide12-4.jpg)
+参考信息：
+1. [美日沖繩南方海域軍演 39架共機擾台西南ADIZ (影音)](https://cn.rti.org.tw/news/view/id/2122937)
+2. [海自与美海军在冲绳以南实施联合训练](https://china.kyodonews.net/news/2022/01/2395add60d32.html)
+3. [9架共機擾台 學者：表達對美日軍演不示弱態度](https://udn.com/news/story/10930/6055655?from=udn-catebreaknews_ch2)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-2.jpg)
+
+总编：DM
+编辑：飞虹
+校对/发稿：为真不破20
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+
+
+![](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
+
+
 
  
 
