--- a/gnews/37.md
+++ b/gnews/37.md
@@ -1,23 +1,38 @@
 ---
-title: 电阻为零的绝缘体 未知原理“铜氧化物超导体”诞生了！
+title: 魁北克法院判决：母亲单方面没有权利阻止未成年子女接种疫苗
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1906368/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1906462/)
 
-撰稿：东京樱花团/ haruka春香
-![](https://assets.gnews.org/wp-content/uploads/2022/01/4-47.png)[图片来源](https://news.yahoo.co.jp/articles/37180524f2ae899a232dd1cf0a4951cbf0d80cad/images/000)
-新泻大学教授佐佐木进准等人开发了具有未知原理的铜氧化物超导体。物质是电阻为零的超导，而铜氧化物是绝缘体。一直以来，铜氧化物的平面结构被认为是超导的源泉。成为不符合定论的超导物质。制备了2种铂-钡铜氧化物的层叠结构。该物质由平面状氧化铜以钡、铜氧化物、安慰剂、铜氧化物、钡、铜氧化物的顺序堆积而成。在负255摄氏度成为超导。
+2022-01-24
 
-为了调查各层的铜原子状态，开发了超高感度核磁共振（NMR）装置。在室温和超导条件下测量，夹在钡和安慰剂之间的铜原子的响应频率升高。从这个应答中可以判断铜原子是绝缘体。其他高温超导物质的响应频率几乎不变。
+编译及评论：16626
+![](https://assets.gnews.org/wp-content/uploads/2022/01/C0@AFOB7Y@JSPPD.png)图片来源：蒙特利尔日报（2022 年 1 月 24 日）
+## 母亲单方面没有权利阻止她的未成年子女接种疫苗
 
-此前，铜氧化物的平面结构被认为是超导的源泉，但即使平面结构本身不通电，也能发现超导。高温超导原理有很多不明之处。用新物质和高灵敏度的测量技术来阐明原理。
+LA PRESSE和蒙特利尔日报（2022 年 1 月 24 日）报道，魁北克省德拉蒙德维尔市（Drummondville），法院就父母对接种 COVID-1 疫苗的分歧作出了新的的裁决，母亲单方面没有权利阻止她的未成年子女接种疫苗。
 
-信息来源：
+这位母亲，相信针对 COVID-19 的疫苗可能包含一个电子“芯片”，并且是由“流产胎儿的细胞”制成的，这位阴谋论的母亲，还认为接种疫苗是“反人类罪”。
 
-[電気抵抗ゼロで絶縁体、未知の原理の「銅酸化物超電導体」が生まれた！](https://news.yahoo.co.jp/articles/37180524f2ae899a232dd1cf0a4951cbf0d80cad)
+法院就父母对接种 COVID-1 疫苗的分歧作出了这样的裁决，这位母亲部分地失去了她对孩子的做为母亲的权力，这位母亲不能阻止她的未成年（14 岁和 9 岁）女儿接种疫苗，孩子的父亲可以单独做主让孩子接种疫苗，这让父亲感到很欣慰。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/C5NHKR3K1X1XPRB90.png)图片来源：蒙特利尔日报，图片显示法官判决书的部分内容。图片中部分文字显示，法官指出：“她（这位母亲）声称（注射）疫苗是一种‘实验性注射’，（注射疫苗）可以使她的女儿（成年后）不能生育” 。
+魁北克省，德拉蒙德维尔市（Drummondville），法官，史蒂夫·J·莱姆尼茨（Steve J. Reimnitz）裁定并驳回这位母亲的要求。“夫人（这位母亲）可以坚持她想要的，但是法院更愿意遵循（魁北克省）公共卫生当局的建议”，法官说。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+法官最后说：“尽快遵守（魁北克省）公共卫生部提议的疫苗（接种措施）来保护孩子，这符合孩子的最大利益”。
+
+本月中旬，义务报（Le Devoir，斯蒂芬妮·马林Stéphanie Marin, 2022 年 1 月 12 日）发表题为《未接种疫苗的父亲暂时失去看望孩子的权利》的文章还报道了魁北克省第一例剥夺未接种疫苗父母探访子女的权力的判决。报道称，在涉及一名 12 岁儿童的家庭法案件中，因为一位父亲没有接种COVID-19疫苗，法官暂时中止了这位父亲的探视权。详细内容刊载于题为《[魁北克省第一例法院判决——剥夺未接种疫苗父母探访子女的权力](https://gnews.org/zh-hans/1864608/)》的文章中。 文章编译及评论人提醒读者注意并仔细品味一下法官的这句话，“…法院更愿意遵循（魁北克省）公共卫生当局的建议”
+
+**参考资料**：
+
+1. LA PRESSE（2022 年 1 月 24 日），Une mère complotiste ne peut empêcher ses filles d’être vaccinées，[https://www.lapresse.ca/covid-19/2022-01-24/jugement/une-mere-complotiste-ne-peut-empecher-ses-filles-d-etre-vaccinees.php](https://www.lapresse.ca/covid-19/2022-01-24/jugement/une-mere-complotiste-ne-peut-empecher-ses-filles-d-etre-vaccinees.php)
+2. 蒙特利尔日报，Le Journal De Montreal，（2022 年 1 月 24 日），Contre la vaccination de ses enfants: une mère déboutée par le tribunal，[https://www.journaldemontreal.com/2022/01/24/contre-la-vaccination-de-ses-enfants-une-mere-deboutee-par-le-tribunal](https://www.journaldemontreal.com/2022/01/24/contre-la-vaccination-de-ses-enfants-une-mere-deboutee-par-le-tribunal%20)
+
+
+编辑：LILY
+
+发布：肥鯮
+
+校对：
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
