--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,44 +1,20 @@
 ---
-title: 达沃斯参会者是共产党帮凶是冠状病毒和疫苗杀人的元凶
+title: 冒险之旅——芬兰国奥委共95名运动员将启程前往北京
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1906682/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1906867/)
 
-G-TV视频链接：[https://gtv.org/video/id=61ecf26e87664c47acd8ade7](https://gtv.org/video/id=61ecf26e87664c47acd8ade7)
+撰稿：随心所在
+![](https://assets.gnews.org/wp-content/uploads/2022/01/252.jpg)图片来自网络
+周一，芬兰奥委会董事会确认了参加北京冬奥的人选。有 22 名运动员经选拔在最后一天加入了芬兰国奥队，即共有95名运动员参加北京冬奥会。其中47人将参加个人比赛，其余则为女子和男子曲棍球国家队。
 
-**郭文贵先生**：大家要想到这三个问题的时候，你就知道了这不是达沃斯跟你没关系。达沃斯这帮孙子就是靠中国人70年的血汗和我们子孙的未来，和卖掉了我们健康的土地、砍掉了所有生存的林木，我们这才是能让他们活到今天。
+芬兰奥委会周一证实，它将派出一支由四名女性和四名男性组成的成熟的外展团队参加奥运会。多达四名运动员被选中参加高山滑雪，他们是 Riikka Honkanen、Rosa Pohjolainen、Erika Pykäläinen 和 Samu Torsti 。除了被选中的滑降运动员 Julia Kykkänen 之外，Jenny Rautionaho 以及男子 Antti Aalto 和 Niko Kytösaho 也将被派往北京。
 
-他们，能在达沃斯所有开会的人都是共产党的帮凶，是冠状病毒、今天疫苗（灾难中）希望能做到死更多人类的人，因为他们不用花成本，欠别人的钱不用还了，保险也不用给了。现在你发现全世界不光是中共国，买了人寿保险的，死了以后一概不赔。哇塞，它大爷的，存款利息不给，基金要倒闭。
+前往北京的Jenni Saarinen是唯一的花样滑冰选手。其它参赛者还有单板滑雪中排名第四的 Carola Niemelä， 自由滑 的 Anni Kärävä， Jimi Salonen， Olli Pentala ，Severi Vierelä ，Jon Salminen ，Simo Peltola 和 big Air。最耀眼的奖牌获得者之一Ilkka Herola ，以及 Eero Hirvonen、Arttu Mäkiaho、Otto Niittykoski 和 Perttu Reponen。
 
-字幕来源：[2022年1月19日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1885617/)
+北京冬奥会最引人关注的是作为一个践踏人权证据充分的集权政府，承办冬奥会是否符合奥运精神，而应邀前往的各国运动员是否知晓？为了荣耀一尊，中国政府面对疫情此起彼伏；用百般不顾人性的限制，对百姓生活造成了多重伤害。可以说此行充满不确定的变数，任何运动员的加入都已经不可避免的被这个政权赋予了政治捧场的色彩。
 
-编辑整理：Jacques；
-
-字幕文件制作：小满；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+*发稿：mgjxs*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
