--- a/gnews/41.md
+++ b/gnews/41.md
@@ -1,40 +1,37 @@
 ---
-title: 谷歌在新的诉讼案中被指控“侵犯”用户隐私
+title: 脸书提供的免费在线服务竟通过移动运营商收费
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1906252/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1906392/)
 
-**翻译：文扬**
-**编辑：Candy**
+#### **【雅典娜快讯】，紧贴时事脉搏**
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/谷歌.png)图片来源：Willie B. Thomas/Getty
+整理/编辑：小红帽
+
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2022-01-25-上午7.47.18.png)图片来源：雅典娜设计组
 
 
-三个州和华盛顿特区的总检察长称：谷歌作为科技巨头，使用了“欺骗性和不公平”的做法。
+根据《CNET》1月24日报道，脸书（Facebook）的免费互联网服务五年多前在发展中国家和社会经济地位低下的地区推出，为人们提供免费使用一些在线服务。但据《华尔街日报》报道，许多人在免费模式下使用应用程序时，被其移动运营商收取少量的数据使用费。在截至2021年7月的一年中，每月总计收取达数百万美元。
 
-德克萨斯州、印第安纳州、华盛顿州和哥伦比亚特区的总检察长已对谷歌提起诉讼，称其在获取用户的位置数据时采用了 “欺骗性和不公平 “的做法。
+据《华尔街日报》周一援引公司内部文件报道，Meta公司去年就注意到了这个问题，在10月的一份备忘录中称其违反了透明度原则。
 
-哥伦比亚特区总检察长卡尔·拉辛（Karl A. Racine）周一在一份声明中宣布，该诉讼旨在结束谷歌“非法使用‘黑暗模式’”，并“收回从位置数据中获得的利润”。
+该问题在内部文件中被描述为“当用户处于免费模式时，他们相信所使用的数据是由其运营商网络覆盖的，尽管这些用户实际上是自己为数据付费”。
 
-拉辛称，自2014年以来，无论用户的隐私设置如何，谷歌都在调查用户的信息，造成一种数据没有被追踪的欺骗性假象。诉讼称，如果谷歌用户关闭了他们的位置数据，他们就会收到通知，试图诱使他们再次分享这些数据。
+此前，脸书在2016年因其在印度的免费互联网服务而受到批评，当时互联网权利团体表示，免费基础网络计划（Free Basics）违反了网络中立性原则，只提供了“部分互联网访问权限”。
 
-诉讼指出：“通过反复‘催促’用户启用谷歌账户设置，谷歌增加了用户无意中或出于沮丧而启用该设置的机会。”
+“如果你认为访问互联网是一项权利，就像获得医疗保健和清洁饮用水一样，”报道称，“那么脸书应该支持每个人都能以可承受的价格访问整个互联网，而不是只访问那些脸书或其合作伙伴认为可以接受的服务。”
 
-它还指责这家科技公司对某些隐私设置和更新进行了“误导、模糊和不完整的描述”，导致许多人在不知情的情况下分享数据。
+当时，这项服务已经在36个国家提供，但一个月后， 脸书的免费基础网络计划在印度被切断。
 
-总检察长写道，这些做法“损害了希望保护其敏感位置信息的消费者”免受谷歌及其广告公司的侵害。
+新闻链接：[Facebook free-internet users charged through their cellular carriers](https://www.cnet.com/tech/services-and-software/facebook-free-internet-users-reportedly-charged-through-their-cellular-carriers/)
 
-谷歌否认了这些指控，称该诉讼提出了 “关于我们设置的不准确的主张和过时的论断”。他们承诺将对这些指控进行 “大力 ”辩护。
-
-原文链接： [Google accused in new lawsuit of ‘invading’ user privacy — RT World News](https://www.rt.com/news/547229-google-lawsuit-location-data/)
-
-***发布：Candy***
+发布：tianzhihuan
 
 更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+[澳大利亚墨尔本雅典娜农场](https://twitter.com/HimalayaAthena1)[Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场](https://www.gettr.com/user/himalayaathena)[Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场](https://discord.gg/KQQVvwBNvm)[Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[GTV](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[直播](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[1](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
