--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,43 +1,428 @@
 ---
-title: 不要溢出效应就是让西方别把中共的钱戳成纸以奴役人民
+title: 高三学生控告总统的理由
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1906644/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1906831/)
 
-G-TV视频链接：[https://gtv.org/video/id=61ecf1b087664c47acd8ad8f](https://gtv.org/video/id=61ecf1b087664c47acd8ad8f)
+韩国首尔天池农场
+翻译：恩真
+校对：鱼子酱
+上传：疯狂的韭菜
 
-**郭文贵先生**：今天我再告诉大家，所谓的“溢出效应”是啥意思？就是村长家里边，把这一村人给绑架了，或者村长在茅屎坑里边在拉屎，你把一个石头扔到茅屎坑里边溅他一身，现在村长就干啥事？你只要敢不听我的，我就把这屎糊到你们全世界去。
+我是高考考生 19岁的杨大林（양대림）
 
-共产党达沃斯论坛印的钞票太多了，美国要加息，因为美国的美元人家是全世界通行，到现在中国人不知道美元是全世界通行、中国人民币全世界不通行。我告诉你们，你们想想，Rosemary你不知道，你去问中国人，97%的人不知道中国的人民币不是全世界通用的原因，就是人民币你只能在中国花，到外国叫外币，是限制你（使用），全人类只有北朝鲜，连非洲都不这样，就你的钱就是纸。
+问：你指控总统过失杀人了吗？
 
-那现在什么叫溢出效应呢？就是我印的钞票太多了，你现在一加息，人家美元是全球流通，它自己的泡沫就挤出来了，一挤出来，它的钱变纸了。你要叫我继续奴隶我的中国14亿人民，所谓的比爹娘还亲的共产党，就是你不能把我的钱变成纸，我要继续奴隶他们。
+这次政府向新冠病毒重症患者下达了行政命令
 
-字幕来源：[2022年1月19日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1885617/)
+要求他们从出现症状后的20天为标准
 
-编辑整理：Jacques；
+离开重症患者的隔离病床
 
-字幕文件制作：小满；
+对此，我以涉嫌过失杀人和杀人未遂的理由
 
-视频制作及上传：Cindy；
+向检察院告发了文在寅（문재인）总统， 郑恩京(**정은경****)** 疾病管理厅长
 
-G-News发布：小满；
+金富谦 国务总理
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+权德哲 保健福利部长官和郑恩京疾病管理厅长
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+这4名防疫负责人
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+问：控告的理由是？
 
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+起初政府自信的说，即使每天出现
 
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+5千-1万的新冠病毒确诊患者，也是完全能够承受的
 
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+并开始了“与新冠共存（with corona）”的防疫体系
 
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+但现在，几乎每天都有约5千名的确诊患者
 
-推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+还有平均每天的50-100名重症患者
 
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+这样从重症隔离病房赶走重症患者
+
+从一般常识来讲
+
+我觉得也是相当不妥的
+
+我了解到大法院判决的时候
+
+即使没有杀害意图
+
+但是因自己的行为
+
+会导致他人的死亡的时候
+
+或者能够认识到危险会发生的话
+
+就会被判定为过失杀人
+
+根据这些先例
+
+我认为这个案件也充分适用于
+
+以过失杀人和杀人未遂的罪名
+
+指控包括下达行政命令的文在寅总统在内的防疫负责人
+
+基于这样的判断
+
+我做出了向检察机关告发的决定
+
+政府对200多名新冠病毒重症患者
+
+下达了行政命令
+
+其中20多名患者已经死亡
+
+另外还有20多名患者
+
+后来出现病情恶化的情况
+
+如果患者出现死亡和病情恶化的情况
+
+政府就应该立即撤回行政命令
+
+尽管这样，即使看到患者死亡的案例
+
+还依旧维持行政命令
+
+我觉得这样的
+
+允许患者出现死亡的结果的意愿
+
+过失杀人和杀人未遂的
+
+问：政府解释患者死亡不是因为移动地点（退院），而是在专用病床上死亡的？
+
+政府在新冠疫苗的问题上
+
+不承认因果关系
+
+在这种情况下这个因果关系是否是因为退院的命令造成的
+
+他们还不可思议的说这是完全没有关系的
+
+我觉得这真的太随便了, 任由他们选择解释
+
+然后，不管重症患者是退院之后死亡的
+
+还是不退院也会死亡的情况
+
+我觉得，对即使立即在重症患者室接受治疗
+
+也有可能死亡的患者来说
+
+给他们下达退院的命令本身就是很有问题的
+
+当然，这让人怀疑
+
+从某种角度来看，这不是单纯的消极的态度
+
+而是以积极的态度来面对
+
+允许死亡的结果
+
+在新冠病毒患者们突然收到
+
+转院命令的情况下
+
+医院或政府应该试图做出努力
+
+其实医院能做的并不多
+
+但，至少政府应该对此做出更多的努力
+
+现在，政府只是不负责任的
+
+盲目的把患者赶走
+
+所以现在患者的监护人们
+
+正在四处打听转院的情况
+
+这让我怀疑这个国家是否是正常的国家
+
+然后，不仅是新冠病毒重症患者
+
+他们为了确保新冠病毒床位的供应
+
+甚至还让脑中风患者把位置让出来
+
+随着患者们被转移到疗养院
+
+不能接受相应的治疗
+
+我通过新闻看到了好多
+
+这种情况让我怀疑这真的是大韩民国吗
+
+大韩民国的医疗已经退步到这个地步了吗
+
+问：作为未成年人也要出面的理由是？
+
+现在有责任牵制执政党的
+
+第一在野党‘国民的力量’，就此次行政命令
+
+发表了批判的评论
+
+从他们的评论来看
+
+这可能就是过失杀人的行为
+
+‘国民的力量’发表了
+
+这样的言论
+
+那么，就请不要光说不做
+
+做出具体的行动
+
+只发表没有时效性的评论
+
+作为国民在旁边看着真是很郁闷
+
+第一的在野党对这方面
+
+好像也不是很积极
+
+然后普通国民在法律上提出问题
+
+可能也不是很容易
+
+上周一，就是在我看到这件事情的3天后
+
+我就马上向检察机关告发了这件事
+
+事实上，我也知道作为学生的我
+
+这样和政府相关人士
+
+包括总统在内的政府人士
+
+展开法律斗争是很不容易的
+
+但是，包括我在内的我的家人和我的朋友们，无论是谁
+
+都有可能染上新冠病毒
+
+然后成为重症患者
+
+收到“退院”这样的命令不是吗？
+
+如果我们国家的政党政治正常的话
+
+通常情况下，第一在野党要牵制这些事
+
+现在，政府也好，在野党也好
+
+在这个问题上的应对
+
+都太安逸，太不负责任了
+
+所以作为高中生的我不得不站出来
+
+问：关于防疫通行证也提出了宪法审判的请求吗？
+
+事实上，关于防疫通行证
+
+我曾在12月10向宪法法院
+
+提出过要求宪法审判的请求
+
+当时有充足的时间
+
+然后有公开召集请求人或者说是告发人
+
+大概召集了1000名左右
+
+作为告发人我也参与了进来
+
+通过政府首次引进防疫通行证的背景上来看
+
+用在安全的多用途设施，
+
+是目的
+
+要想多用途设施达到
+
+没有传播新冠病毒的危险的话
+
+我想，应该对有传播危险的人
+
+实施较严格的防疫方针
+
+对传播危险较低的人
+
+应该实施
+
+相对较低要求的防疫方针
+
+但是，如果查看包括美国疾病预防控制中心CDC在内的
+
+世界著名研究机构发布的资料的话
+
+首先，多数研究结果表明
+
+接种者和未接种者在新冠病毒传播的可能性方面
+
+是没有显著差异的
+
+在这种情况下，如果按照目的来看的话
+
+即接种者和未接种者
+
+在新冠病毒传播的危险性上是相同的
+
+那区别这两个群体的
+
+合理的理由又是什么呢？很是疑惑
+
+其实不管是多么安全的疫苗
+
+就算是药
+
+把这些东西投入进身体里
+
+从某种意义上讲
+
+这本身就破坏了身体的完整性
+
+所以一定程度上限制了身体的自由
+
+因此，对于被接种者来说
+
+可以期待某种程度上的效果
+
+也可能表现出一定频率的副作用
+
+所以需要有一个过程
+
+充分的告知我们这些
+
+然后给本人深思熟虑的机会来决定是否要接种疫苗
+
+现在，按照政府的方针，如果不接种疫苗
+
+要么（使用多用途设施时）必须每48小时进行一次PCR检查
+
+要么使用某餐厅或咖啡馆时
+
+未接种者只能独自一人使用
+
+导致日常生活受限
+
+事实上，这在法律上是不利的
+
+那样的话最终就会变成
+
+强制接种疫苗的情况
+
+不仅是平等的原则
+
+就连身体的自由
+
+也被侵害
+
+然后，现在国外也有对疫苗义务化
+
+做出违宪判决的国家
+
+在我们国家的国民请愿里
+
+现在已有超过30万名的国民
+
+反对防疫通行证
+
+反对的舆论也越来越强烈
+
+另外，无论是宪法学者，还是法律界
+
+都表示
+
+这有违宪嫌疑
+
+我觉得韩国宪法也应该
+
+对此做出一次判断
+
+所以提出了宪法诉求
+
+问：不想接种疫苗的理由是什么？
+
+我作为十几岁的‘10代’，就新冠病毒而言
+
+根据疾病管理中心发布的资料来看
+
+没有一例无基础疾病的
+
+‘10代’青少年
+
+因新冠病毒死亡
+
+相反，有相当一部分十来岁的青少年
+
+是接种新冠病毒疫苗后死亡的
+
+另外，即使没有到死亡的地步
+
+也有很多脑死亡状态或植物人
+
+或需要重症治疗程度的
+
+重症以上反应的事例
+
+通过新闻陆续的被报道出来
+
+在这种情况下我对青少年是否有必要接种疫苗的事情上
+
+产生了怀疑
+
+我也是站在青少年的立场上
+
+认为比起疫苗带来的的益处
+
+损失是更多的
+
+所以直到现在我也没打疫苗
+
+以后也不会打
+
+问：直接站出来发声应该很不容易吧？
+
+因为是针对政府和权利
+
+发出批判的声音
+
+我确实对个人的人身安全有相当大的不安和担心
+
+事实上，即使如此
+
+我还是更加担心政府采取的强制措施
+
+给我带来的不安和恐惧
+
+尽管我对个人安全感到焦虑
+
+我还是打算进行这样的活动
+
+而且以后也会尽我所能的
+
+在这种问题上发出自己的声音
+
+问：父母有担心吗？
+
+父母在担心我的同时
+
+另一方面也在支持和援助
+
+我的这一行为
+
+[https://youtu.be/2GLgaPiJiX0](https://youtu.be/2GLgaPiJiX0)
+
+**免****责声****明：本文****内****容****仅****代表作者****个****人****观****点，平台不承担任何法律****风险****。**
 
  
 
