--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,36 +1,24 @@
 ---
-title: 01/25每日播报｜美国可能会对俄罗斯打弹药战还是经济战？
+title: 中共在纽约举行“全球发展倡议之友小组”启动会议
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1907350/)
+`儒为` [轉載自GNews](https://gnews.org/zh-hans/1907433/)
 
-**By:[秘翻新闻](https://gtv.org/broadcast/watch/61efbcff28a108147c623806)**
+作者：德国纽伦堡正义农场-儒为
+![](https://assets.gnews.org/wp-content/uploads/2022/01/之友小组.jpeg)封面来源：网络图片
+新华社北京2022年1月24日报道，中共国常驻联合国代表团20日在纽约举行“全球发展倡议之友小组启动会议”，标志着小组正式成立。联合国常务副秘书长阿明娜、副秘书长刘振民到会致辞，联合国秘书长非洲问题特别代表、联合国开发计划署副署长、联合国妇女署副执行主任等20多家联合国机构负责人与会并发言。来自100多个国家的代表，包括80多国的大使参会。
 
-**[2022-01-25](https://gtv.org/broadcast/watch/61efbcff28a108147c623806)**
+**中共成立“全球发展倡议之友小组”，打着为避免以美国为首的民主旧势力的孤立和打压为幌子，建立了所谓以中共为核心的国际独裁新势力。为此中共不惜动用常年渗透和收买的潜伏在联合国内的隐藏力量；为此不惜“大撒币”和威胁多国积极踊跃参加该会议来营造“之友小组”启动的盛况，以此雄辩的证明习近平提出的全球发展倡议获得了各方广泛支持。但让我们让我们非常不理解的是，这么自信的中共、这么自信的习近平，为什么把该会议放在美国纽约举行，而不是伟大的中共国？**
 
-据美国《国家公共广播电台》(NPR)1月24日报道，由于考虑到大批俄罗斯军队已经集结并可能会入侵乌克兰，美国的五角大楼正在将大约8500名美军置于高度警戒状态。
+中共外交部发言人赵立坚24日表示，全球发展倡议由中共国提出，但属于全世界。倡议秉持开放包容的伙伴精神和共商共建共享的原则，向所有国家开放。全球发展倡议之友小组是倡议合作机制建设的重要一步，体现了中方践行真正多边主义的坚定决心。
 
-五角大楼发言人约翰·柯比（John Kirby）周一表示，尚未作出部署部队的决定，国防部长奥斯汀进一步提高了他们的状态，将其部署的天数从10天缩短到5天。
+**中共已处于穷途末路之际，为了给自己续命、为了给自己的梦续命，完全不要脸面的脱光自己的衣服，在美国纽约成立“之友小组”，全世界喊话我要“蓝金黄”你们，凡是同中共“一起下过乡、一起扛过枪、一起分过赃、一起嫖过娼”的都是“伙伴关系”，都可以“共同富裕”，“富”的是“之友小组”成员，而“共”的是中共国内14亿老百姓。虽然这是一个非常不好的事件，但是也更能暴露中共的邪恶本质，“老二”要重新拉个山头来挑战“老大”的地位，而且所用的手段还都是“见不得光“的，结局可想而知。**
 
-报道称，拜登则表示，他无意向乌克兰派遣美国军队，但明确表态他准备在俄罗斯入侵的情况下对其实施严格的经济制裁。拜登在周一与欧洲领导人通话后表示，双方在应对俄罗斯问题上达成了 “完全一致 “的意见。
+新闻来源：🔗[外交部：全球发展倡议之友小组成立体现中方践行多边主义的坚定决心](http://www.news.cn/world/2022-01/24/c_1128296450.htm)
 
-白宫表示，这些领导人讨论了如果俄罗斯入侵，”准备对其施加大规模的后果和严重的经济代价”。他们还呼吁开展更多的外交活动。
+*编辑/校对/发稿：德国纽伦堡正义农场-儒为*
 
-据报道，俄罗斯在与乌克兰交界的不同地点集结了大约10万名军队。莫斯科否认它打算入侵，但美国官员担心进攻可能即将发生。
-
-报道指出，美国已经向乌克兰提供了军事援助，最近一批20万磅的 “致命援助 “包括弹药，已于上周五抵达。
-
-其他北约成员正承诺向东欧派遣舰艇或喷气式飞机。北约秘书长延斯·斯托尔滕贝格（Jens Stoltenberg ）周一表示，丹麦、法国、荷兰和西班牙正在向立陶宛、罗马尼亚或保加利亚，或向黑海或波罗的海派遣或考虑派遣军事支援。
-
-斯托尔滕贝格呼吁采取更多的外交手段来缓和紧张局势。美国国务卿安东尼·布林肯（Antony Blinken）一直在与俄罗斯外交部长谢尔盖·拉夫罗夫（Sergey Lavrov）举行会议，但俩人没有取得任何突破，他们同意继续会谈。
-
-（ 秘翻主编 Grace编译报道 ）
-
-发布 :星星
-
-* * *
-
-**By 【秘密翻译组-即时新闻播报组】**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
+想了解更多资讯，请扫描农场二维码：
+![](https://assets.gnews.org/wp-content/uploads/2022/01/85c861bf6b6325b4.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
