--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,35 +1,80 @@
 ---
-title: 请君入瓮：中共称境外运动员及奥运人员已有12人入境后感染
+title: 01/25每日播报&#124;社媒消息：蓬佩奥 埃内斯·坎特
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1907308/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1907365/)
 
-作者：东京樱花团｜捆绑CCP一千年
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2057.png)[*图片来源*](https://www.republicworld.com/world-news/china/beijing-winter-olympics-china-says-first-covid-19-case-detected-in-team-member-articleshow.html)
-**北京冬奥闭环实际上是一个无形的奥运监狱，奥米克戎在北京冬奥期间爆发后，北京宣布已有境外涉奥人员感染病毒，表明这场“冬奥纳粹运动会”正在露出它邪恶的本性，这将成为中共政府挟持奥运人员为人质，以定向投毒迫使参赛国屈服的目的。这就是中共人制人新型生物武器设计的初衷，可在和平时期用于解决地缘政治纠纷的杀手锏和魔盒。**
+BY:[秘翻新闻](https://gtv.org/broadcast/watch/61efbcff28a108147c623806)
 
-据中共国环球网头条、腾讯网/财联社25日消息称，“1月24日0:00至23:59，机场入境涉奥人员总数累计246人，其中运动员及随队官员23人，其他利益相关方223人。经海关检测后，复检阳性12人，均来自其他利益相关方。”
+**2022-01-25 **
 
-该消息语焉不详，内涵杀机。首先，涉奥人员入境核酸检测正常，到了复检时发现有呈阳性者12人。更令人感到不透明的是，感染源均来自“其他利益相关方”，如此重大问题应第一时间报告感染源，而他们无法提供证据。
+**1. 蓬佩奥1月25日转发捍卫自由中心（Standing For Freedom Center）盖特：** 本周，中共因其再次试图入侵台湾而成为新闻焦点，但他们不仅仅是威胁了东亚国家，中共也是美国的最大外部威胁。
 
-- ***延展阅读：***[***国际奥委会向各队保证北京冬奥会将如期举行***](https://www.espn.com/olympics/story/_/id/33000143/ioc-assures-teams-winter-olympics-beijing-go-ahead)
+[https://gettr.com/post/pqbjkgca7d](https://gettr.com/post/pqbjkgca7d)
+
+**2. Andy再开 1月24日在盖特发文： **蓬佩奥1月23日接受了福克斯电视台的采访。主持人问道：“俄国、伊朗和中共举行联合军事演习，以及目前的乌克兰局势，会让他国怎么看待美国的外交政策？”蓬佩奥强调：“美国需要做出回应。而响应的方式有许多种，川普政府就没有通过战争树立了美国的威慑力。各国都在看本届拜登政府是否有能力有决心维护乌克兰主权。不仅习近平、金正恩、霍梅尼，还有台湾人民、伊朗人民、中国人民都在关注美国的动作。只有美国建立了威慑力，才能减少目前美国所要面对的挑战。”
+
+[https://gettr.com/post/pq997m78fa](https://gettr.com/post/pq997m78fa)
+
+**3. Andy再开1月24日在盖特发文： **日本一家电视台1月24日报道说，1月21日，在举行跳台滑雪等项目的张家口，中共向云层发射了大量的增雪导弹。中共官媒央视称，在发射了55枚导弹后，张家口地区的降雪量达到了1厘米。早在2008年的北京夏季奥运会，中共为了确保开幕式出现晴天，在开幕式前故意发射增雨弹来消除天空中的雨云。
+
+[https://gettr.com/post/pq9e3jebe5](https://gettr.com/post/pq9e3jebe5)
+
+**4. 《零对冲》1月24日在盖特发文：** 根据在1月20日晚间提交的披露表，被列入黑名单的中共科技公司华为摆脱了贸易限制令的影响，在2021年第四季度向民主党的权力经纪人托尼·波德斯塔 (Tony Podesta)支付了50万美元以游说拜登政府。加上波德斯塔前三个月游说白宫所赚的50万美元，他在六个月的时间里已经获得了100万美元的游说报酬。披露的信息说，波德斯塔最新的游说活动以总统行政办公室为目标，围绕“电信服务和受影响的贸易问题”展开。华为在最近几个月加强了在美国行动。它们自去年7月以来聘用了6位说客，波德斯塔只是其中之一。其他说客还包括一名前国会议员和一名前国会助理。
+
+[https://gettr.com/post/pqa3zu2edb](https://gettr.com/post/pqa3zu2edb)
+
+**5. 埃内斯·坎特1月24日在盖特发文： **当我们在中共国时，我们可以去西藏转一转吗？我们能看到中共政权对这些美丽的人做了什么吗？在中共的残暴统治下，西藏人的基本权利和自由都不复存在。让我们向世界展示中共是如何抹除西藏人的身份、宗教和文化的。
+
+[https://gettr.com/post/pq6mp829c5](https://gettr.com/post/pq6mp829c5)
+
+**6. 埃内斯坎特1月24日在盖特发文：** 我一定要跟大家分享这件事，证明姚明的虚伪！最初姚明邀请我去拜访中共国，隔天我正式接受了他的邀请。但一天之后，他就像个小孩子一样在Instagram上屏蔽了我。我猜习近平不同意，拜托不要再让自己在全世界面前丢脸了！
+
+[https://gettr.com/post/pq4e9rc9bf](https://gettr.com/post/pq4e9rc9bf)
+
+**7. 《国家脉动》1月25日在盖特发文：** 英国卫生行业人员将工作服抛在唐宁街，抗议疫苗强制令。 【盖文转报道，上周末，数千位英国国民医疗服务体系NHS的员工来到唐宁街，将工作制服抛在地面上，反对强制人们接种新冠疫苗。伦敦和英国的其它地方也爆发了抗议活动。NHS的疫苗接种指南要求工作人员必须在2月初接种第一针疫苗，在4月1日截止日期前至少接种两针。据估计，如果拒绝参加大药厂的mRNA疫苗实验，那么从4月1日起，将有超过7万名NHS工作人员失去工作。】
+
+[https://gettr.com/post/pqanfs9f11](https://gettr.com/post/pqanfs9f11)
+
+**8. Newsmax 1月23日在盖特发文：** 保罗·马里克 (Paul Marik)医生说，伊维菌素是一种可以治疗新冠病毒的高效药物，而且可能是这个星球上最安全的药物之一。
+
+[https://gettr.com/post/ppzx3o4915](https://gettr.com/post/ppzx3o4915)
+
+**9 .Disclose.tv 1月25日在盖特发文：** 纽约州最高法院法官裁定，纽约州的口罩强制令“违宪“，并宣布其“无效和不可执行”。
+
+[https://gettr.com/post/pqds542ff0](https://gettr.com/post/pqds542ff0)
+
+**10.Disclose.tv1月25日在盖特发文：莫斯科证券交易所**的股指暴跌7.5，道琼斯指数下跌3%，纳斯达克下跌4.5%。
+
+[https://gettr.com/post/pq96u2c752](https://gettr.com/post/pq96u2c752)
+
+[https://gettr.com/post/pqb8qk8fc0](https://gettr.com/post/pqb8qk8fc0)
+
+**11. 盖特官方1月25日发文说：** 自盖特六个月前推出以来，推特的股票已经暴跌了50%!
+
+[https://gettr.com/post/pqbd0c6dd0](https://gettr.com/post/pqbd0c6dd0)
+
+**12. 喜马拉雅战鹰团1月25日在盖特发文：** 玛丽·博登（Mary Bowden）医生在1月23日的反对强制令游行集会上说：“医疗自由已经被医院、保险公司、政府和大药厂劫持了。医生们，现在是站起来拯救我们职业的时候了！不要让其他人来决定向你们身体里注射什么，更不要让其他人来决定向你们的孩子身体里注射什么！”
+
+[https://gettr.com/post/pqdwy57cdb](https://gettr.com/post/pqdwy57cdb)
+
+**13. 郭文贵先生在1月24日的大直播中说：** 习近平对冬奥会能办成啥样很不自信；冬奥会开幕式不允许提邓小平在南方画了个圈，要称习为党和国家核心领导人以定一尊，还要把冬奥会说成是改革开放走向新纪元。中共将开动宣传机器把没有观众的冬奥会说成是有12亿人观看的、获得巨大成功的奥运会，为打台湾做铺垫；文贵要在中共老杂毛家门口来个“甜蜜蜜”运动，在北京整点大动静！甜蜜蜜运动获得了党内及各界人士的支持，习近平的中国梦将成噩梦；人民英雄纪念碑要改为母亲碑并刻上杨改兰等中国母亲的故事，毛泽东纪念堂要改成十亿冤魂纪念堂；今天的直播绝对是划世纪的！
+
+[https://gettr.com/post/pqcdsud1f2](https://gettr.com/post/pqcdsud1f2)
+
+[https://gettr.com/post/pqdkg5c604](https://gettr.com/post/pqdkg5c604)
+
+[https://gettr.com/post/pqd94s2312](https://gettr.com/post/pqd94s2312)
+
+**以上社交媒体新闻由 巴拉克和Stephanie 联合编译报道**
+
+发布：陸柒陸捌
+
+* * *
+
+**By 【秘密翻译组-即时新闻播报组】**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
 
 
-这件事透露出三个问题，第一、[环球网](https://open-hl.toutiao.com/open/mobile_detail/vivo_custom?showOriginalComments=true&amp;vivo_news_source=1&amp;utm_campaign=open&amp;docId=V0207056976500809171464&amp;utm_medium=webview&amp;vivoRecommendPushType=1&amp;isNews=1&amp;label=push&amp;from_channel=0&amp;showComments=0&amp;utm_source=vivoliulanqi&amp;noPolitical=1&amp;groupId=7056976500809171464)、[腾讯网](https://new.qq.com/omn/NEW20220/NEW2022012500452900.html)、[网易](https://3g.163.com/dy/article/GUE0EK4005198CJN.html)非主流媒体不是第一时间报道，一个叫《[观察者](https://www.guancha.cn/politics/2022_01_24_623395.shtml?s=zwyxgtjbt)》的网站在24日的15:57:57发布了该消息，其中《[光明网](https://m.gmw.cn/2022-01/24/content_1302776873.htm)》也报道了该消息。此外，中新社也是24日以《[北京冬奥组委公布23日防疫情况](https://www.chinanews.com.cn/sh/2022/01-24/9660198.shtml)》为题报道了境外奥运团队感染疫情。第二、既然这个消息在国内已经铺天盖地，新华社、人民网、CCTV等主流媒体只字不提？第三、更重要的是，感染者涉及哪些国家，没提。
-
-问题似乎更加诡异，该消息透露，截止1月24日0:00至23:59分，闭环内核酸检测总次数41810，其中运动员及随队官员和其他利益相关方41810人中“复检阳性3人、运动员及随队官员1人（或此人即是随队官员又是运动员），其他利益相关方2人。中共表示，“北京冬奥会入境涉奥人员和相关工作人员均实行闭环管理，与社会面完全隔开。”北京言下之意是向外界表示，所有进入“北京冬奥集中营”的人发生任何为题，我们都是向外界封锁和要求“闭嘴”。
-
-- ***延展阅读：***[***北京冬奥会中国队员中发现首例 COVID-19 病例***](https://www.republicworld.com/world-news/china/beijing-winter-olympics-china-says-first-covid-19-case-detected-in-team-member-articleshow.html)
-
-
-对此，美国当地时间24日，郭文贵（MILES GUO）透露， “运动员和官员们去北京的途中知道盘古龙头变龟头的事以后，并到盘古现场看到“盘古龟头大楼”才相信MILES GUO说的疫苗是绝对灾难、相信病毒是共产党的生化武器。”（[58:21 时段了解更多](https://gettr.com/post/pqa8gpf229)）
-
-MILES GUO透露的消息和上述中共媒体所报道的事件是否关联，尚不得而知。但MILES GUO有关涉及中共内幕、病毒和疫苗真相的爆料正随着冬奥会的召开被外界越来越多地证实，正如境外运动员到北京后看到盘古龙头被改成“龟头”后，他们更加相信了 MILES GUO所说的是真的，因为他们从中共国当局对 MILES GUO 先生的惧怕、惊恐中找到了答案。其中一名女士（运动员）当即表示，“我现在就要回去，不要待在北京了！”
-
-2022年1月25日
-
-*校对：东京樱花团/東洋武士*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
