--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,92 +1,111 @@
 ---
-title: 接种疫苗后运动员体力和表现皆衰退
+title: 01/25每日播报｜新闻简讯 : 北京冬奧在即赞助商集体沉默 蔡鄂生及徐鸣涉被开除党籍
 ---
-`香草山醫療部` [轉載自GNews](https://gnews.org/zh-hans/1907260/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1907346/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/logo-5-768x103-40.jpg)
+**By:[秘翻新闻](https://gtv.org/video/id=61efbcff28a108147c623805)**
 
-**作者**：纽约香草山 医疗部 文玥
+**2022-01-25**
+
+1. **纽约州最高法院裁定强制口罩令违宪**
 
 
+[综合外媒1月25日消息，美国纽约州最高法院一名法官裁定，纽约州州长凯西·霍赫尔强制口罩令违宪。据悉，纽约州所有公共室内空间的强制口罩令在2021年12月就已生效，并将于2022年2月1日到期。](https://www.wkbw.com/news/state-news/new-york-state-supreme-court-judge-rules-gov-hochuls-mask-mandate-unconstitutional%20https://www.wgrz.com/article/news/health/coronavirus/nys-supreme-court-judge-rules-against-state-mask-mandate-kathy-hochul/71-6f754e2d-47cf-41aa-a29b-5dd229a94ef6%20https://www.fingerlakesdailynews.com/2022/01/24/judge-rules-new-yorks-mask-mandate-unconstitutional/)
 
-2021年期间，媒体频繁报导运动员在场上突然出现呼吸困难、心脏不适，紧急就医、甚至死亡情况。运动员在比赛中出现体力不支或身体不适是有先例的，但都是偶然情况，绝非是近期的高发频率。曾有学校的体育教练发现，接种疫苗后的冰球队员，体力明显大不如前，而且和同队未接种疫苗队友相比，运动表现下降。因此，乔恩-墨菲 和科琳-休伯就此进行了一个对比研究。他们的研究成果于2022年1月22日经同行评审后发表。
+[托马斯·拉德梅克法官在周一的裁决中写道，州长无权实施这项强制命令。](https://www.wkbw.com/news/state-news/new-york-state-supreme-court-judge-rules-gov-hochuls-mask-mandate-unconstitutional%20https://www.wgrz.com/article/news/health/coronavirus/nys-supreme-court-judge-rules-against-state-mask-mandate-kathy-hochul/71-6f754e2d-47cf-41aa-a29b-5dd229a94ef6%20https://www.fingerlakesdailynews.com/2022/01/24/judge-rules-new-yorks-mask-mandate-unconstitutional/)
 
-**文献作者**：乔恩-墨菲（Jon Murphy）, 科琳-休伯（Colleen Huber）
+秘翻新闻明澈编辑报道
 
-**文章摘要**：该研究针对20名高中和初中的学生运动员进行了回顾性的观察。20名运动员中由于父母的选择，一半接种了疫苗，一半没有接种。该研究对两组学生进行了如下比较：1. 两组学生在相同的体育活动中的运动表现 2. 接种疫苗的运动员学生在接种前和接种后的运动表现。
+**2. 马来西亚女第三剂疫苗后脑血管破裂 急救6天记忆衰退、不识字**
 
-这项研究对于了解COVID疫苗接种后引起的心血管变化有着重要意义。
+[综合媒体1月24日消息，马来西亚一名女子日前在脸书表示，她一个月前接种第三剂中共病毒疫苗后，一开始并未出现明显副作用，直到3天后却突然剧烈头痛、血压飙高，当晚更出现呕吐、癫痫等恐怖症状。没想到隔天，女子竟开始语无伦次，血压同时持续上升，她的家人才敢忙将其送院急救。](https://fnc.ebc.net.tw/fncnews/world/146214%20https://www.ettoday.net/news/20220124/2176652.htm)
 
-**简介**
+[抵达医院时，她的意识已十分模糊，连医师问她名字、地址等基本信息都答不出来，于是院方将她送往紧急治疗区。事后，医师证实她的脑血管有破裂出血情况，甚至出现中风征兆。](https://fnc.ebc.net.tw/fncnews/world/146214%20https://www.ettoday.net/news/20220124/2176652.htm)
 
-与COVID mRNA疫苗相关的伤害和死亡资料正在不断积累中。当前记录这些信息的临床研究已达数百项。在注射辉瑞COVID疫苗后，已发现超过1500种不良反应事件，其中许多是造成永久性残疾，总数超过158,000例不良反应。作者鼓励读者们阅读文章后的连结，也是辉瑞报告的最后9页中的列表。这份辉瑞公司的档案之前未被FDA公开，FDA认为它应该被封存55年，后又改为封存75年。而在2021年12月，法院命令其强制公开。 COVID疫苗造成的严重伤害和死亡的整体风险，令全世界的医生和科学家感到震惊。著名的免疫学家和微生物学家苏查里特-巴克迪（Sucharit Bhakdi）博士和病理学家阿纳-布克哈特（Arne Burkhardt）博士总结了这些疫苗对接种后导致死亡的致病作用。尸检结果显示，接种后的心血管失调比任何其他器官的失调都多。炎症标志物的增加与COVID疫苗相关。专家认为从大面积推广COVID疫苗以来，于2021年期间出现的运动员的突然死亡，大多是由于严重的心脏或心血管病变导致。
+[住院治疗6天后，被获准出院的女子仍身体虚弱，且健康状况竟每况愈下，甚至开始出现记忆力衰退、视力模糊、不识字等现象。她无奈表示，许多事都变得很奇怪，明明能正常和人交谈，但很多东西却瞬间不认得，连最简单的蔬果都不记得叫什么名字，或许连幼儿园课本也无法阅读。](https://fnc.ebc.net.tw/fncnews/world/146214%20https://www.ettoday.net/news/20220124/2176652.htm)
 
-**实验方法和结果**
+秘翻新闻明澈编辑报道
 
-该研究就两位高中体育教练的学生运动员们进行了访问调查。学生运动员中有15人是高中生，其余的都更年轻。教练和调查人员事前不知任何学员的疫苗接种信息。学员们是与教练们自由地、非正式地谈论了疫苗接种，及接种后的感受。由于学生们的父母对其子女接种疫苗的选择，自然而然的形成了实验组和对照组，非双盲实验资料。
+**3. 乌克兰中将称 俄罗斯很可能在冬奥闭幕日入侵乌克兰**
 
-基于近期乔-拜登、埃马纽埃尔-马克龙和贾斯汀-特鲁多等政治领导人对未接种疫苗者的一系列过激言论，为保护学员及其父母，教练和学校，所有信息都是严格匿名的。
+[据《东森新闻》1月24日消息，乌克兰中将帕夫留克在接受英国《泰晤士报》采访时表示，俄罗斯入侵乌克兰的时间点，很有可能是在2022年2月20日，也就是北京冬奥闭幕当天。俄媒《今日俄罗斯》指出，依据帕夫留克的说法，俄罗斯不想破坏中共主办北京冬奥的大日子，所以可能会选在闭幕那天入侵乌克兰。报道还指出，乌克兰中将帕夫留克已向莫斯科当局发出警告，乌克兰人早已准备好要徒手撕烂俄罗斯人。](https://www.ettoday.net/news/20220124/2176930.htm)
 
-在资料收集之前或收集时，没有任何预先计划对两组数据进行比较研究。两位教练是回顾性地观察了接种COVID疫苗的学生运动员的以下情况，我们总结了他们的发现。
+[据《彭博社》22日报道称，有分析人士认为，习近平最不希望看到普京在冬奥会期间攻击乌克兰，这会给冬奥会这一为习提供连任砝码的重要时刻蒙上阴影，还可能会令中俄关系陷入麻烦，甚至将中共国拉入外交战。](https://www.ettoday.net/news/20220124/2176930.htm)
 
-1）所有接种疫苗的学生运动员，在比赛中均未达到自己以前的比赛水平；在两位教练的评估中，所有人的表现都比2020年时差。
+秘翻新闻Vera编辑报道
 
-2）所有接种疫苗的学生运动员，均无法承受与接种前相同的训练时间和强度。
+**4. 澳洲总理微信公众号突被改名 由福建科技公司拥有**
 
-3）接种疫苗的学生运动员，恢复体力的时间比接种疫苗前更长，比未接种疫苗学员时间更长。
+[综合媒体1月24日消息，澳洲总理莫里森微信公众号改由福州985科技公司拥有，并改名「澳华新生活」，介绍也变成「为华人社区提供在澳生活信息」。](https://news.now.com/home/international/player?newsId=464298&amp;home=1%20https://tw.news.yahoo.com/%E6%BE%B3%E6%B4%B2%E7%B8%BD%E7%90%86%E5%BE%AE%E4%BF%A1%E5%85%AC%E7%9C%BE%E8%99%9F%E7%AA%81%E8%A2%AB%E6%94%B9%E5%90%8D-%E5%85%A7%E5%AE%B9%E9%82%84%E8%AE%8A%E4%B8%AD%E5%9C%8B%E6%94%BF%E5%BA%9C%E5%AE%A3%E5%82%B3%E6%96%87-084038302.html)
 
-4) 接种后，大多数或所有接种疫苗的学生运动员，都谈到了经历以下一种或多种反应，
+[据悉，澳洲执政自由党2019年为总理莫里森开设微信帐户，由一名内地人登记和管理，不时发中文帖文，借此与中共国网民及全球华人联系，约七万多人追踪。澳洲媒体指出，自由党早在去年七月已不能再登入和控制这个帐户，总理办公室多次向微信要求重新使用该帐户，但都未成功。](https://news.now.com/home/international/player?newsId=464298&amp;home=1%20https://tw.news.yahoo.com/%E6%BE%B3%E6%B4%B2%E7%B8%BD%E7%90%86%E5%BE%AE%E4%BF%A1%E5%85%AC%E7%9C%BE%E8%99%9F%E7%AA%81%E8%A2%AB%E6%94%B9%E5%90%8D-%E5%85%A7%E5%AE%B9%E9%82%84%E8%AE%8A%E4%B8%AD%E5%9C%8B%E6%94%BF%E5%BA%9C%E5%AE%A3%E5%82%B3%E6%96%87-084038302.html)
 
-a)  胸部疼痛
+[对此次时间，腾讯回应指是帐户拥有权转换时的问题，将会依照公司规矩处理。对于此事件被批评为网络审查和政治干预，中共国外交部指出，这是澳洲政客与微信之间的问题。](https://news.now.com/home/international/player?newsId=464298&amp;home=1%20https://tw.news.yahoo.com/%E6%BE%B3%E6%B4%B2%E7%B8%BD%E7%90%86%E5%BE%AE%E4%BF%A1%E5%85%AC%E7%9C%BE%E8%99%9F%E7%AA%81%E8%A2%AB%E6%94%B9%E5%90%8D-%E5%85%A7%E5%AE%B9%E9%82%84%E8%AE%8A%E4%B8%AD%E5%9C%8B%E6%94%BF%E5%BA%9C%E5%AE%A3%E5%82%B3%E6%96%87-084038302.html)
 
-b)  头晕
+[澳洲战略政策研究所执行董事詹宁斯表示，此次事件绝非骇客所为，而是中共蓄意的挑衅行为。](https://news.now.com/home/international/player?newsId=464298&amp;home=1%20https://tw.news.yahoo.com/%E6%BE%B3%E6%B4%B2%E7%B8%BD%E7%90%86%E5%BE%AE%E4%BF%A1%E5%85%AC%E7%9C%BE%E8%99%9F%E7%AA%81%E8%A2%AB%E6%94%B9%E5%90%8D-%E5%85%A7%E5%AE%B9%E9%82%84%E8%AE%8A%E4%B8%AD%E5%9C%8B%E6%94%BF%E5%BA%9C%E5%AE%A3%E5%82%B3%E6%96%87-084038302.html)
 
-c)  看到星星
+秘翻新闻StevenZ（行侠正义）编辑报道
 
-d)  感觉要晕倒
+**5. 韩国拟向31国大使介绍对朝政策，未邀请中共国**
 
-e)  呼吸急促
+[综合媒体1月24日消息，韩联社1月24日报道，韩国统一部发言人李种珠24日在例行记者会上提到，韩国统一部长官李仁荣于1月25日邀请31个国家的驻韩国大使、代办以及国际红十字委员会、联合国世界粮食计划署等8个国际组织的驻韩国办事处代表举行对朝鲜政策说明会。](https://www.hk01.com/%E5%8D%B3%E6%99%82%E5%9C%8B%E9%9A%9B/727976/%E9%9F%93%E5%9C%8B%E6%93%AC%E5%90%9131%E5%9C%8B%E5%A4%A7%E4%BD%BF%E4%BB%8B%E7%B4%B9%E5%B0%8D%E5%8C%97%E9%9F%93%E6%94%BF%E7%AD%96-%E4%B8%AD%E5%9C%8B%E4%B8%8D%E7%8D%B2%E9%82%80%E6%83%B9%E9%97%9C%E6%B3%A8%20https://www.zaobao.com.sg/realtime/world/story20220124-1236230)
 
-学生运动员都是自由和自发地谈论以上症状，当时没有人做记录，教练没有对症状有任何提示。
+[值得一提的是，美国和欧盟驻韩国人员将应邀出席活动，但中共国、俄罗斯和日本方面的有关人士以日程安排为由缺席。](https://www.hk01.com/%E5%8D%B3%E6%99%82%E5%9C%8B%E9%9A%9B/727976/%E9%9F%93%E5%9C%8B%E6%93%AC%E5%90%9131%E5%9C%8B%E5%A4%A7%E4%BD%BF%E4%BB%8B%E7%B4%B9%E5%B0%8D%E5%8C%97%E9%9F%93%E6%94%BF%E7%AD%96-%E4%B8%AD%E5%9C%8B%E4%B8%8D%E7%8D%B2%E9%82%80%E6%83%B9%E9%97%9C%E6%B3%A8%20https://www.zaobao.com.sg/realtime/world/story20220124-1236230)
 
-5）未接种疫苗的女性运动员，现在可在比赛中击败接种疫苗的男性队员。去年她们是无法战胜男性队友的，这种变化是出乎意料的，教练们认为是不正常的。
+秘翻新闻StevenZ（行侠正义）编辑报道
 
-1)、2)、3)和5)在疫苗接种后的几个月，仍可在所有接种疫苗的学生运动员身上观察到。
+**6. 技术落后且被美制裁 中共国汽车晶片缺口将达20%**
 
-相比之下，未接种疫苗的学生运动员，没有上述症状，也没有运动表现的缺陷或运动耐力的下降。正如两位教练所观察到的，这些未接种的学员，他们的耐力和表现正按照教练所预期的在持续改善中。
+[据《大纪元》1月24日报道，中共国晶片供应今年仍将处于紧张状态，汽车芯片缺口将扩大到20%。中共专家自曝，中共国缺晶片的关键原因不在于疫情影响，而在于中共国技术的落后及美国对中共的制裁。](https://www.epochtimes.com/gb/22/1/24/n13525266.htm)
 
-**讨论**
+[2022年伊始，晶圆代工厂及晶片制造商反馈的数据显示，2022年他们生产的车规级微处理器、存储、逻辑及模拟类晶片，只能满足中共国400万辆新能源汽车的需求。中汽协（CAAM）在2021年12月底时预测，2022年中国新能源汽车的销量可达500万辆，与晶片的供应量相比，中共国新能源汽车市场将面临20%的需求缺口。](https://www.epochtimes.com/gb/22/1/24/n13525266.htm)
 
-运动员在运动时需要比在静止时更强大的血液循环。这种增强的血液循环，是为了满足在高强度的活动或用力时身体所增加的耗氧需求和代谢活动。
+[中共国新能源汽车技术创新中心总经理原诚寅在2021年1月对彭博社表示，中共国汽车晶片短缺最主要的原因不是疫情影响，而是国内缺乏技术知识，以及受持续的地缘政治的紧张局势影响。原诚寅认为，如果中共国企业不能自主生产半导体，国内的供应链将会继续受到国际因素的影响。汽车晶片短缺的状况将持续10年。](https://www.epochtimes.com/gb/22/1/24/n13525266.htm)
 
-血流量的增加，需要靠增加心输出量和动脉血管扩张来达到。随着心输出量的增高，对冠状动脉血流的需求和供应也会增加。冠状动脉血管的舒张，是受到自动调节机制的调控；以及由自主神经系统和激素经由在血管上分布的神经来调节，其作用是根据身体活动的需要，来调控血管的舒张与收缩。
+秘翻新闻文洋MAS编辑报道
 
-mRNA COVID疫苗引发了整个身体内生成刺突蛋白的程序。刺突蛋白作用在血管内皮细胞上的ACE 2受体，引发血管收缩的作用。其结果可能会在运动时，也是身体最需要血液和氧气供应的时候阻碍血氧供应。与刺突蛋白相关的免疫和炎症因素，也可以造成血管周围、动脉周围的细胞、CD8和NK T细胞的浸润。这些因素都可以降低冠状动脉的血管扩张。
+**7. 北京冬奧在即，赞助商集体沉默**
 
-刺突蛋白的位置和作用，可进一步恶化向周围和冠状组织输送血液的问题。从内皮表面突出的刺突蛋白与ACE-2受体对接，会产生湍流而不是层流现象，从而对血流产生不利影响。 随着停滞的血液聚集，凝结会遍布整个身体内。这种微凝结使血液变稠和流速缓慢，将进一步损害血液和氧气送达到心脏和外围的毛细血管床。因此，冠状动脉的血流会受到高粘度的不利影响，这也是由刺突蛋白经由CD147诱发红血球细胞粘附聚集造成的。结果导致心脏要承受更大的负担，才能在动脉和毛细血管中推动比正常更粘稠的血液到器官。
+[据《香港01》新闻网1月24日报道，北京冬奧距今不足两周，历届这个时候一众赛事赞助商的奧运会广告理应铺天盖地的大肆宣传，但至今Visa、P&G、可口可乐等10多间国际著名赞助商却相对低调，像走钢丝般小心翼翼部署冬奥期间的宣传工作。](https://www.hk01.com/%E4%B8%96%E7%95%8C%E5%B0%88%E9%A1%8C/727977/%E5%8C%97%E4%BA%AC%E5%86%AC%E5%A5%A7%E5%9C%A8%E5%8D%B3-%E4%B8%AD%E7%BE%8E%E8%A7%92%E5%8A%9B%E4%B9%8B%E4%B8%8B%E8%B4%8A%E5%8A%A9%E5%95%86-%E9%9B%86%E9%AB%94%E6%B2%89%E9%BB%98)
 
-上述机制对最佳血流造成了障碍，这必然会影响到所有接种了会生成刺突蛋白的COVID疫苗的个体。 因此，我们必须建议所有目前或将来有计划从事体能运动的儿童或年轻人，避免接种任何COVID疫苗。
+[冬奥会通常是全球大型品牌向世界各地人群推销其产品和服务的好机会。然而，直至今天北京冬奧举行在即，相关的宣传推广卻依然不见影踪。](https://www.hk01.com/%E4%B8%96%E7%95%8C%E5%B0%88%E9%A1%8C/727977/%E5%8C%97%E4%BA%AC%E5%86%AC%E5%A5%A7%E5%9C%A8%E5%8D%B3-%E4%B8%AD%E7%BE%8E%E8%A7%92%E5%8A%9B%E4%B9%8B%E4%B8%8B%E8%B4%8A%E5%8A%A9%E5%95%86-%E9%9B%86%E9%AB%94%E6%B2%89%E9%BB%98)
 
-**原文连结****：**[https://pdmj.org/papers/Student\_athletes\_perform\_worse\_than\_controls\_following\_COVID\_vaccines](https://pdmj.org/papers/Student_athletes_perform_worse_than_controls_following_COVID_vaccines)
+[赞助商集体沉默的背后，一方面是以美国、英国等多个政府组织，因为中共的新疆人权迫害，发出声明抵制北京冬奥会。另一方面，中共否认并批评美国等国家将奧运会政治化，许多企业很清楚知道，会因中共国问题上立场而蒙受经济损失。](https://www.hk01.com/%E4%B8%96%E7%95%8C%E5%B0%88%E9%A1%8C/727977/%E5%8C%97%E4%BA%AC%E5%86%AC%E5%A5%A7%E5%9C%A8%E5%8D%B3-%E4%B8%AD%E7%BE%8E%E8%A7%92%E5%8A%9B%E4%B9%8B%E4%B8%8B%E8%B4%8A%E5%8A%A9%E5%95%86-%E9%9B%86%E9%AB%94%E6%B2%89%E9%BB%98)
 
-**免责声明：**本文仅代表作者个人观点，与G-NEWS立场无关
+[文贵先生此前就曾表示，北京冬奥会终究会成为一个笑话。](https://www.hk01.com/%E4%B8%96%E7%95%8C%E5%B0%88%E9%A1%8C/727977/%E5%8C%97%E4%BA%AC%E5%86%AC%E5%A5%A7%E5%9C%A8%E5%8D%B3-%E4%B8%AD%E7%BE%8E%E8%A7%92%E5%8A%9B%E4%B9%8B%E4%B8%8B%E8%B4%8A%E5%8A%A9%E5%95%86-%E9%9B%86%E9%AB%94%E6%B2%89%E9%BB%98)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/月曆.png)
+秘翻新闻StevenZ（行侠正义）编辑报道
 
-校对/编辑/发稿：云豹
+**8. 人工降雪，中共为举办北京冬奥会操控天气**
 
-**更多信息，更多关注**
+[据《大纪元》1月25日报道，为创造符合冬奥会的场地环境，中共已经将数百万加仑的水变成了假雪，他们还准备改变天气，进行人工降雪。大量的降雪甚至可以驱散浓重的雾霾，使天空变蓝。](https://www.epochtimes.com/gb/22/1/24/n13526862.htm)
 
-[**纽约香草山农场**** GTV****–香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[《华盛顿邮报》周一报导说，虽然现在还不确定中共会在冬奥会期间使用多少这类人工降雨，但过去三个月，至少有250枚炮弹射向张家口附近的云层，同时有12架负责人工降雨的飞机在该地区的机场处于待命状态。](https://www.epochtimes.com/gb/22/1/24/n13526862.htm)
 
-[**纽约香草山农场**** GTV-MOS TALK****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[举办滑雪和单板滑雪比赛的延庆和张家口几乎不下雪，完全需要靠人工造雪完成场地建设，预计将使用4,900万加仑的水，环保人士担心这可能会影响北京的供水，因为当地供水量本来就不多。](https://www.epochtimes.com/gb/22/1/24/n13526862.htm)
 
-[**纽约香草山农场**** Gettr**](https://www.gettr.com/user/himalaya_mos)
+[此外，要从无到有打造这些户外比赛场地所需要的能源和土地，针对干旱的北京，几乎所有专家都一致同意，绿色奥运会的说法站不住脚。](https://www.epochtimes.com/gb/22/1/24/n13526862.htm)
 
-[**纽约香草山农场****YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+秘翻新闻文洋MAS编辑报道
 
-[**欢迎加入纽约香草山农场**** Discord**](https://discord.gg/ChqXAHd)
+**9. 蔡鄂生及徐鸣涉严重违纪违法被开除党籍**
 
+[据《香港电台网》1月24日报道，中共中央纪委国家监委网站公布，日前经中共中央批准，对银监会前党委委员兼副主席蔡鄂生，严重违纪违法问题立案审查调查。](https://news.rthk.hk/rthk/ch/component/k2/1630289-20220124.htm)
+
+[中共当局指出，经调查，蔡鄂生对党不忠诚不老实，滥用金融监管权，严重扰乱金融市场秩序，严重污染金融领域政治生态，对抗组织审查。并涉及违规收受礼品礼金、钱色交易，退而不休、利用职务便利及影响力为他人在融资贷款、项目承揽及职务晋升等方面谋利，并非法收受巨额财物。](https://news.rthk.hk/rthk/ch/component/k2/1630289-20220124.htm)
+
+[中共当局指，蔡鄂生严重违反党的政治、组织及工作等纪律，构成严重职务违法并涉嫌受贿、滥用职权犯罪，性质严重及影响恶劣，应予严肃理，决定处以开除党籍处分分，按规定取消其享受的待遇，收缴违纪违法所得，并将涉嫌犯罪问题移送检察机构依法审查起诉，所涉财物一并移送。](https://news.rthk.hk/rthk/ch/component/k2/1630289-20220124.htm)
+
+[另外，中共国粮食局前党组成员兼副局长徐鸣，亦因严重违纪违法被开除党籍。当局指，他热衷迷信活动，并违规收受私营企业财物，还有利用职务之便为其子经营活动某取利益等行为。](https://news.rthk.hk/rthk/ch/component/k2/1630289-20220124.htm)
+
+秘翻新闻StevenZ（行侠正义）编辑报道
+
+发布 : 恩典
+
+* * *
+
+**By 【秘密翻译组-即时新闻播报组】**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
