--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,24 +1,28 @@
 ---
-title: 中共在纽约举行“全球发展倡议之友小组”启动会议
+title: 中共国掌握欧洲港口和机场的安全
 ---
-`儒为` [轉載自GNews](https://gnews.org/zh-hans/1907433/)
+`喜马拉雅意大利罗马达芬奇农场` [轉載自GNews](https://gnews.org/zh-hans/1907566/)
 
-作者：德国纽伦堡正义农场-儒为
-![](https://assets.gnews.org/wp-content/uploads/2022/01/之友小组.jpeg)封面来源：网络图片
-新华社北京2022年1月24日报道，中共国常驻联合国代表团20日在纽约举行“全球发展倡议之友小组启动会议”，标志着小组正式成立。联合国常务副秘书长阿明娜、副秘书长刘振民到会致辞，联合国秘书长非洲问题特别代表、联合国开发计划署副署长、联合国妇女署副执行主任等20多家联合国机构负责人与会并发言。来自100多个国家的代表，包括80多国的大使参会。
+翻译/整理：萧亦
+![](https://assets.gnews.org/wp-content/uploads/2022/01/01252.jpg)图片来自la repubblica.it
+欧洲港口和机场的安全，从阿姆斯特丹到雅典，还有佛罗伦萨、比萨和威尼斯都掌握在一家由国家部分控制的中共国公司手中，据美联社报道，该公司与北京军队和共产党最高层有密切的关系。
 
-**中共成立“全球发展倡议之友小组”，打着为避免以美国为首的民主旧势力的孤立和打压为幌子，建立了所谓以中共为核心的国际独裁新势力。为此中共不惜动用常年渗透和收买的潜伏在联合国内的隐藏力量；为此不惜“大撒币”和威胁多国积极踊跃参加该会议来营造“之友小组”启动的盛况，以此雄辩的证明习近平提出的全球发展倡议获得了各方广泛支持。但让我们让我们非常不理解的是，这么自信的中共、这么自信的习近平，为什么把该会议放在美国纽约举行，而不是伟大的中共国？**
+对在中共国与其他八个欧洲国家之间进行的长期调查中，发现来自中共国的一家名为“同方威视”的公司在很短的时间内迅速成为了世界上排名第一的金属探测器和货物及车辆扫描仪的公司。不仅是在港口和机场，北约与俄罗斯的边界以及2020年达沃斯世界经济论坛上都使用了该设备。
 
-中共外交部发言人赵立坚24日表示，全球发展倡议由中共国提出，但属于全世界。倡议秉持开放包容的伙伴精神和共商共建共享的原则，向所有国家开放。全球发展倡议之友小组是倡议合作机制建设的重要一步，体现了中方践行真正多边主义的坚定决心。
+由于这些原因，今天该公司被排除在美国市场之外，但是根据相关文件显示，这家公司深植根于欧洲大陆：在 27 个成员国中的 26 个国家使用该公司的产品。但其所有权结构的复杂性和不透明性也在欧洲引起不少人的注意：西方官员和政界人士认为，风险在于中共国可能利用同方威视设备破坏关键中转站或非法获取政府、工业或个人数据。
 
-**中共已处于穷途末路之际，为了给自己续命、为了给自己的梦续命，完全不要脸面的脱光自己的衣服，在美国纽约成立“之友小组”，全世界喊话我要“蓝金黄”你们，凡是同中共“一起下过乡、一起扛过枪、一起分过赃、一起嫖过娼”的都是“伙伴关系”，都可以“共同富裕”，“富”的是“之友小组”成员，而“共”的是中共国内14亿老百姓。虽然这是一个非常不好的事件，但是也更能暴露中共的邪恶本质，“老二”要重新拉个山头来挑战“老大”的地位，而且所用的手段还都是“见不得光“的，结局可想而知。**
+2009 年，该控制了 90% 的中共国国内市场。在 1999 年向中共国海关出售其监控系统后，与澳大利亚和阿拉伯联合酋长国签订了第一份国际合同。如今，它在 170 个国家/地区开展业务。公司生产的X射线扫描仪近年来已在众多世界公共活动中使用：从2015年米兰世博会到同年温布尔登网球锦标赛再到2014年巴西世界杯和两届奥运会。
 
-新闻来源：🔗[外交部：全球发展倡议之友小组成立体现中方践行多边主义的坚定决心](http://www.news.cn/world/2022-01/24/c_1128296450.htm)
+2019年，同方威视已在欧洲为海关、民航、港口和政府机构安装了1000多台扫描仪。与俄罗斯接壤的五个北约成员国中的爱沙尼亚、拉脱维亚、立陶宛、波兰都已经购买了同方威视设备用于过境。以及欧洲的两个主要港口：鹿特丹和安特卫普。
 
-*编辑/校对/发稿：德国纽伦堡正义农场-儒为*
+一位美国政府官员对美联社说：“北京正在利用国家支持的公司以低价进入关键的欧洲基础设施：民用机场、旅客安检、海港和货物安检。共产党政府可能会利用同方威视在欧洲的存在来收集跨境贸易流动的大数据，从本地网络中提取信息，例如航运数据或乘客信息，或者在发生冲突时破坏贸易流动。”
 
-想了解更多资讯，请扫描农场二维码：
-![](https://assets.gnews.org/wp-content/uploads/2022/01/85c861bf6b6325b4.jpg)
+荷兰公司 Datenna 试图解开公司内部运作人员的纠结，该公司通过在四个参与级别上找到十几个主要实体（包括四个国有企业和三个政府实体）来绘制同方威视的所有权结构。大股东为同方公司，持股71%。而同方的最大股东是中国核工业集团公司（CNNC）的投资部门，这是一家由中共国国务院政府控制的国有能源和国防企业集团。美国国防部将 CNNC 归类为中共国军事公司，因为它与中共国人民解放军共享技术和专业知识。
+
+原文链接：[https://www.repubblica.it/esteri/2022/01/25/news/la\_cina\_mette\_le\_mani\_sulla\_sicurezza\_dei\_porti\_e\_aeroporti\_europei-335144077/](https://www.repubblica.it/esteri/2022/01/25/news/la_cina_mette_le_mani_sulla_sicurezza_dei_porti_e_aeroporti_europei-335144077/)
+
+责任编辑/发布：意大利达芬奇农场   萧亦
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
