--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,26 +1,29 @@
 ---
-title: 一个一感冒就要挨饿的地方
+title: 饮食业主的悲鸣，国家缩短营业时间的政令应明确化
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1907461/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1907644/)
 
-##### 翻译：Julia Gao|Warren Wang
-校对：枳实
-剪辑|字幕：蛮吉
-编辑：Mttfly
+撰稿：东京樱花团｜haruka春香
+![](https://lh3.googleusercontent.com/QoTy5-oaV88v-7U5PWiLPilELbYfCR4qJ6c8QTYr7pyQv4Hv9qAXcOvP_QpP8inhbjPMbilyLG0eWdmL72nYEeMrGlC4Kj_TzJK0GpLG5l1SJ7NEmkoIJgpJUvSlo5TE8QMZuQe7)[*图片来源*](https://news.yahoo.co.jp/articles/84f4d3da8d0125f6d24bd68457ce51db999826c6/images/000)
+随着中共病毒（冠状病毒）感染的迅速扩散，福冈县1月24日根据自身冠状病毒警报，开始向饭店提出“短时经营”（缩短营业时间）的要求，很多店铺提前了关门时间，距离上次请求解除不过3个月，餐饮行业传出了“请放过我”的悲鸣。政府要求的防止蔓延等重点措施的佐贺、大分、鹿儿岛等3个县也即将开始缩短营业时间，并扩大到九州全县。另外，有人发牢骚说政府在应对新变种病毒上出现了混乱。
 
-视频用陕西方言讲述了西安疫情爆发的前前后后。郭文贵先生爆料，冠状病毒是阻止香港人上街参加反送中运动的。疫苗是共产党的生化武器。陕西书记给陕西人打的疫苗浓度是最高的，打两针相当于河南人打十针。只有灭掉中国共产党，才能解救身处疫苗灾难中的同胞。
+“现在是第几次要求缩短营业时间的？”在北九州市小仓北区经营日式餐厅“黑田节”的店主流上诚治（49岁）叹了口气，该店获得了防止感染对策的认证，提供酒水的营业时间只能到晚上9点。
 
-视频链接：[郭先生盖特](https://app.gettr.com/post/pmi87dd11f)
+上次解除“缩短营业时间”要求后，客人陆续开始回来了，年末年初店铺的预约表也已经排满，可是从1月24日开始，预约表上又出现了很多空白。
 
-*发布：Mttfly*
-**
-更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+政府内部围绕会餐等限制人员和抑制人流问题出现了混乱。根据重视哪一方，今后所要求的对应方式也会有所不同。希望国家明确方针。
 
+在福冈市中央区的炸串店“串カツあらた”天神店，下午6点多就有闲古鸟在鸣叫（不来客人的谚语）。店长切通雄太（29岁）表示：“年末年初的预约本以为满了，没想到这次缩短经营时间要求又来了。”
+
+缩短营业时间到2月20日为止，但店主们都担心“会再次延长”。大分县去年先后两次自主“短时经营”的要求，此次是第一个重点措施的县，计划于25日发表“短时经营”要求的详细内容。进入今年以来，大分市中央街的酒吧内顾客骤减，平日的营业额甚至为零。店主60多岁的一位男子透露：“经营完全入不敷出，只能靠政府的补助金帮助（度过困难）。”一位和家族经营鸡肉料理餐厅的40多岁女性说：“感觉终于又来了，我们会按照要求继续营业，我们将尽最大努力度过难关。”
+
+24日晚的福冈天神地区，很多下班后匆匆回家的人，在等公交汽车的一位男性上班族（49岁）表示：“儿子正在准备大学考试，因此想确保他预防不被感染。”
+
+信息来源：[**「もう勘弁して」「国は方針を明確に」時短要請、飲食店から悲痛な声**](https://news.yahoo.co.jp/articles/84f4d3da8d0125f6d24bd68457ce51db999826c6)
+
+*校对：东京樱花团 / 東洋武士*
+*发布：东京樱花团 / 平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
