--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,70 +1,43 @@
 ---
-title: 七哥告诉你
+title: 去年澳洲通胀率激增3.5%或导致提前加息
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1907290/)
+`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/1907360/)
 
-撰稿：东京樱花团/待命（文晓）
-（视频源自笔者本人）
-【七哥告诉你】
+#### 【雅典娜快讯】，紧贴时事脉搏
 
-七哥告诉你
+整理：Sara9
+编辑：小红帽
 
-多亏儿时的淘气
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/f7f3817f4c8144fe-1.png)图片来源：雅典娜设计组
 
-才留下纯真的回忆
 
-七哥告诉你
+根据《澳大利亚人》1月25日报道， 2021年澳大利亚的通胀率激增到3.5% ，提前加息可能性大增。
 
-就是那片玉米地
+澳大利亚统计局(ABS)的最新数据显示，在截止到9月份的三个月里，通胀率上升了0.8%，其中12月的季度增幅大大超过了预期的1.3%。
 
-教会我最美的爱意
+本季度最大的通胀驱动因素是新住宅的购买，增长了4.2%，而且汽油价格在该季度上升了6.6%。
 
-仿佛一年长两岁
+在汽油和住房建设成本进一步大幅增加的支持下，截至2021年12月的一年中，通货膨胀率从3%急剧加速到3.5%。
 
-咋理出这么多道理
+剔除了燃料和食品等波动较大的商品后，基本通胀率从2.1%上升到2.6%。
 
-成熟太早的我
+这三个月的平均消费者物价指数（CPI）增长了1%，远高于经济学家的预测。
 
-十五岁娶妻
+核心消费价格增长指标现在完全处于澳大利亚储备银行（RBA）2-3%的目标范围内，消费价格压力的攀升提高了储行提前加息的可能性，澳储行将在下周二举行今年的第一次会议。
 
-七哥告诉你
+澳大利亚储备银行行长Philip Lowe一直认为，明年年底前不会加息。
 
-就是八弟的离去
+新闻链接：[2021](https://cn.theaustralian.com.au/2022/01/25/62838/)[年澳通胀率激增](https://cn.theaustralian.com.au/2022/01/25/62838/)[3.5%](https://cn.theaustralian.com.au/2022/01/25/62838/)[提前加息可能性大增](https://cn.theaustralian.com.au/2022/01/25/62838/)
 
-点燃了复仇的火炬
+发布：tianzhihuan
 
-七哥告诉你
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场](https://twitter.com/HimalayaAthena1)[Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场](https://www.gettr.com/user/himalayaathena)[Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场](https://discord.gg/KQQVvwBNvm)[Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[GTV](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[直播](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[1](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)[台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-就是污秽的皇城
-
-激发出无尽的勇气
-
-仿佛好多个八弟
-
-渴望吃烤熟的玉米
-
-七哥看不下去
-
-本能的站起
-
-这　都是天意
-
-天　让我爱你
-
-这　都是天意
-
-天　让我恨你
-
-这　都是天意
-
-天　让我有你
-
-这　都是天意
-
-天　让我灭你
-
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
