--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,32 +1,22 @@
 ---
-title: 01/25每日播报｜美国顶级医生敦促公众停止接种中共病毒疫苗
+title: 乌克兰，8500名美军处于戒备状态
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1907457/)
+`喜马拉雅意大利罗马达芬奇农场` [轉載自GNews](https://gnews.org/zh-hans/1907621/)
 
-**By:[秘翻新闻](https://gtv.org/broadcast/watch/61efbcff28a108147c623806)**
+翻译、整理：萧亦
+![](https://assets.gnews.org/wp-content/uploads/2022/01/01251.jpg)图片来自gazzettadelsud.it
+五角大楼已将 8500 名士兵置于高度戒备状态，以便他们可以在数小时内部署到欧洲。紧接着，拜登总统召集包括意大利总理德拉吉在内的盟友讨论共同努力以阻止俄罗斯进一步的侵略。
 
-**[2022-01-25](https://gtv.org/broadcast/watch/61efbcff28a108147c623806)**
+持续升级的明确信号可能有两个目标：首先，劝阻普京放弃即将入侵的想法，因为后果将是灾难性的; 第二，认真加强对盟国的保护，以便在俄罗斯如果最终袭击基辅后做好自卫的准备。
 
-《网关专家》1月24日报道，美国内科医生、心脏病专家、流行病学家和中共病毒灾难医疗应对的领导者彼得·麦卡洛博士（Peter McCullough），敦促公众停止接种中共病毒疫苗。他指出，在世界范围内，疫苗计划适得其反，那些疫苗接种率最高的国家，死亡率也最高。
+同时，北约宣布与丹麦的行动，将向立陶宛派遣一艘护卫舰和四架F-16战斗机，而西班牙和荷兰将在保加利亚和法国在罗马尼亚部署更多部队。同时，杜鲁门号航空母舰已抵达地中海，参加预定于 2022 年举行的海王星打击演习。
 
-周日，麦卡洛在华盛顿特区举行的 “击败强制 “集会上告诉《网关专家》，那些已经接种过一到两剂中共病毒疫苗的人，如果再接种第三剂，将大大增加身体器官衰竭或致命的风险。他强烈反对会在身体的大脑、肺、心脏、骨髓和生殖器官中产生刺突蛋白的“基因疫苗”。
+美国国务院已下令从基辅撤离非必要的外交人员，并敦促美国平民离开该国，英国紧随其后，而德国和澳大利亚也准备了类似的措施。同时美国驻联合国总部大使托马斯·格林菲尔德表示说外交仍然是第一选择。
 
-德克萨斯州的一位医生表示，市面上的辉瑞、莫德那、强生和阿斯利康基因疫苗所含的刺突蛋白在体内持续的时间比人们想象的要长得多，而且都聚集在重要部位，包括大脑、肺、心脏、骨髓和生殖器官。
+原文链接：[https://www.repubblica.it/esteri/2022/01/24/news/ucraina\_in\_allerta\_8\_500\_soldati\_usa\_biden\_chiama\_gli\_alleati\_in\_europa-335124813/?ref=RHTP-BH-I322793271-P3-S2-T1](https://www.repubblica.it/esteri/2022/01/24/news/ucraina_in_allerta_8_500_soldati_usa_biden_chiama_gli_alleati_in_europa-335124813/?ref=RHTP-BH-I322793271-P3-S2-T1)
 
-这位医生还建议，在没有找到方法排出那些刺突蛋白前，不要再接种这种基因疫苗了。因为人体内的刺突蛋白会逐渐积累，无法自动排出体外。它几乎肯定会导致慢性疾病甚至是死亡。
+责任编辑/发布：意大利达芬奇农场   萧亦
 
-麦卡洛博士警告说，不仅中共病毒疫苗是危险和致命的，而且全美国的医院都在危险地遵从一个中共病毒治疗方案，这会令住院的感染病人必死无疑。现在，这些方案已经被评估是不可信的。
-
-据报道，所谓治疗方案是指，医院通常会给中共病毒阳性患者使用损害肾脏和肝脏的 “瑞德西韦”，随着患者的健康状况下降，遵循此方案的医生会对他们负责治疗的患者实施气管插管，这一过程可能会导致患者死亡。
-
-（ 秘翻新闻主编  冰糖葫芦喵编译报道 ）
-
-发布 :星星
-
-* * *
-
-**By 【秘密翻译组-即时新闻播报组】**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
