--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,29 +1,91 @@
 ---
-title: 遐想春风里
+title: 全球疫情更新（BMJ直指药厂欺诈史，要求公开数据）
 ---
-`银河勇气之星` [轉載自GNews](https://gnews.org/zh-hans/1907446/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1907608/)
 
-By：银河勇气星｜楚天秋
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截屏2022-01-25-18.06.09.png)
-万里无云，微风吹过，太阳打着哈欠斜挂天际。如同被硬生生拉开窗帘喊醒的夜猫子，一脸疲倦还带着怒气：是谁把云幔撤去，想睡个懒觉怎么这么难！中南坑里的习帝一夜未眠，梗着的脖子更歪了，脸色疲惫不堪。“皇室”成员扩大会议开了一晚，姐夫、弟媳、小舅子各个面面相觑，无言以对。只有彭将军略显镇定：当初劝你别开啥冬奥会，吃力不讨好，你不听，一定要开，要万国来朝。开吧，现在来了几十国，你当然还得见见面，吃个饭，不然这么多钱不就白花了！习帝一个加速转身，抡起开过手扶拖拉机的大巴掌，差点儿拍在桌子上，最后0.1秒又停下了，看着小舅子问：彭磊，让你找的大师究竟算没算出是几点几分？彭磊尴尬：什么大师，都是骗子，找了几个都说不出各所以然来，倒是有一个说了，只能算年月日的运势，无法再精确了。
+**整理/编辑：枳实**
 
-一群废物！习帝低声愤怒：不是说你们，这些大师，给他们打上“最好”的新冠疫苗，送走！彭磊的面色从紧张到放松，说：姐夫放心，一定送他们好走。习帝面色缓和一些，坐下说道：大家别太担心，他也是普通人，不能怎么样，无非就是搞点恶作剧，估计有人做内应，不在保卫服务人员里，就在来的嘉宾里，筛选出可疑的，24小时盯着，总会露马脚，什么时候宴会，我们说了算，时间的主动权在我们手里，这一亩三分地，轮不到他做主。彭将军站在窗前，端着咖啡喝了半口，插话：行了，只有你最担心，我可没觉得什么，不就是《甜蜜蜜》吗？谁都听过，谁都会唱。就像这猫屎咖啡，谁喝不得呢！习帝没搭茬，胖头微转问：远平，你有什么看法？对面的习弟（远平）开口道：郭——
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2022-01-25-上午7.38.43.png)图片：雅典娜农场设计组 精灵蓝
 
-停！习帝制止：别提姓名！习弟改口：他和军队谁有联系，顺着这条线查一下，看看安插了谁在保卫里，至于服务员，应该没什么问题。听了这话旁边的百亿景（甜）一脸鄙夷插嘴：有人爱好给女服务员做肛检！习帝愠怒：家务事别在这里扯！说点正经的。百亿景：是了。把所有参加宴会的人，身上东西都留在安全地方，不就行了！那个普京看起来也不保险，吃里爬外，越不可能的人越有可能。习帝点点头：有点道理，但是如果不在场内，在户外怎么控制呢？彭将军放下咖啡杯，靠着沙发背说：我看你也别费尽心思去想了，首先安全问题，不会天上掉下导弹，然后百密总有一疏，他也许是声东击西，你是防不住的，不如顺势而为，写个稿子，把《甜蜜蜜》放进去，在他行动前，先说出来，只要你说了，他随便怎么放歌，也只是在呼应你而已！习帝笑纹爬上猪脸：还是夫人厉害！一语惊醒梦中人。就这么办，他能搞摇滚，我难道比他差，别的不好说，搞文艺，谁是我们的对手！
 
-夜幕降临，长安街灯火通明，岗哨林立，整个二环都围了一圈铁丝网，气氛肃杀。冬奥会的嘉宾们被安排着陆续进入大会堂，普京和女秘书在保镖的簇拥下，坐在上席。保镖们被收了所有的装备，蔫头耷拉脑袋。普京皮笑肉不笑，招手示意不远处的彭磊，几里咕噜说了几句。彭磊问翻译，翻译说：他说红场的导弹部队随时候命，会帮助习主席清除可能的威胁。彭磊心里暗想：不就是被缴了枪不忿吗！装什么大爷，吆五喝六的。他边想着边目光游移，看到旁桌的美国大妞，正坐立不安地扭着屁股，心里顿时又高兴起来：肛拭子果然有效。此时，主持人在说：欢迎四代核心习主席讲话！一片掌声之后，习帝不露声色说道：嘉宾们！朋友们！千里万里，我们在此相聚，新年伊始，春风又吹大地。我在此祝愿大家，身体健康，生活甜如蜜。人类的希望在哪里，在梦里——
+雅典娜疫情更新（2022年 1月25日）
 
-全场都在期待中，安静得可怕，只是什么也没发生，习帝在内卫的左右拥护下离开会场，身后响起此起彼伏的掌声。彭将军依旧靠着沙发说：至于这么紧张嘛！啥事没有，把你给吓的。习帝一边擦额头的汗，一边应和：确实，虚惊一场。早知如此，就不这么说了。窗户打开，透透气！内卫紧走几步打开窗户，毕恭毕敬地站在旁边。忽然，只听得四面八方传来歌声：甜蜜蜜，你笑得甜蜜蜜，好像花儿开在春风里。在哪里，在哪里见过你，你的笑容这样熟悉，一时想不起。啊—亲自指挥，亲自部署，打赢这场战争——熟悉的声音在歌声之后，响彻天空。习帝眼前一黑，颓然跌坐，喃喃自语：这下真完了！
+[往期《雅典娜疫情更新](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)[》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
 
-* * *
+**一，全球疫情基本数据**
 
-作者：楚天秋
-发布：骄子
+感染总数：354,332,988（日新增3,329,963，14天增幅+29%）
 
-[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)，欢迎加入银河系农场。欢迎各农场兄弟姐妹们坐客串门，欢迎订阅我们的我们的G-TV官方频道[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)、[银河农场–勇气星球](https://gtv.org/user/5f0d36870cac397fcf00154c)
-![](https://assets.gnews.org/wp-content/uploads/2021/12/345-1.jpg)
+死亡总数：5,602,941（日新增8,198人，14天增幅 +21%）
 
- 
+**二，全球“疫苗”毒针统计数据**
+
+“疫苗”毒针注射总数：99.3亿
+
+完全“接种”：41亿人
+
+完全“接种”百分比：52.6 %
+
+**三，澳洲疫情和“疫苗”数据**
+
+感染总数：2,287,646（今日新增46,845人）
+
+死亡总数：3,230人（今日新增 76人）
+
+每万人感染人数：886.888人
+
+“疫苗”毒针注射总数：48,377,727 （日新增322,467 针）
+
+完全“接种”：19,180,099人
+
+第二针“接种”百分比：78.3%
+
+16岁以上人口接种至少一剂疫苗的比例：&gt;95%
+
+16岁以上人口接种至少两剂疫苗的比例：93%
+
+**四，评论摘译**
+
+英国医学杂志（BMJ）上周发表社论：[《COVID](https://www.bmj.com/content/376/bmj.o102)[疫苗和治疗，我们必须取得原始数据，立刻马上！》](https://www.bmj.com/content/376/bmj.o102)这篇文章十分罕见地指着大药厂的 鼻子斥责它们是“最不受信任的行业”，当然也把矛头指向了美，英，加拿大政府监管机构。这篇文章应该也能唤醒很多被“主流”媒体洗脑的人，全球疫苗注射总数都接近百亿剂了，可是原始数据到现在竟然全都没有公布！这就是所谓“安全”和“有效”吗？
+
+文章回顾了十年前流感流行期间，世界各国政府花费了数十亿美元来储存抗流感病毒药物，但这些药物被证明并没有降低并发症，住院，或者死亡。大多数有利于获得药物批准的实验都是由制造商赞助的，作者也由制造商付费，甚至离谱到连主要作者都没有访问原始数据的许可，要求访问原始数据进行独立分析的学者的要求当然也被拒绝了。
+
+十年前的教训今日有所改进吗？不，事实证明，人类的记忆很短暂，尽管中共病毒疫苗和治疗在全球范围内迅速推进，但原始数据仍然无法为医生、研究人员和公众所获取，而且很可能在未来几年内仍然如此。
+
+辉瑞表示，直到 2025 年 5 月，即主要研究完成日期后 24 个月，它才会开始接受试验数据请求，Moderna 表示，“可能会提供数据……最终研究结果将在 2022 年公布。” 阿斯利康可能已准备好接受其几项大型 III 期试验的数据请求。但实际上获取数据可能会很慢，在完整提交请求后可能需要长达一年的时间。
+
+对所有这些试验来说，这种做法在道德上都是站不住脚的，尤其是对于那些涉及重大公共卫生干预的试验。
+
+药厂如此，政府同样也不可信任。在向FDA要求提供辉瑞疫苗数据的信息自由后，FDA提出每月发布 500 页，这一过程需要数十年才能完成，并在法庭上辩称，由于需要首先编辑敏感信息，公开发布数据的速度很慢信息。然而，本月，一名法官拒绝了 FDA 的提议，并下令以每月 55 000 页的速度发布数据。数据将在请求组织的网站 ( https://phmpt.org/ ) 上提供。
+
+大型制药公司是最不受信任的行业。在生产 中共病毒疫苗的众多公司中，至少有 3 家已经通过刑事和民事和解，造成了数十亿美元的损失。一家承认欺诈罪。其他公司没有疫情前的业绩记录。现在，新冠病毒大流行造就了许多新的制药业亿万富翁，疫苗制造商报告了数百亿美元的收入。
+
+BMJ支持基于可靠证据的疫苗接种政策。随着全球疫苗的继续推广，让我们只信任“系统”是不合理的，也不符合患者和公众的最大利益，并希望基础数据可以在某些地方进行独立审查指向未来。这同样适用于 中共病毒感染的治疗。透明度是建立信任的关键，也是回答人们关于疫苗和治疗的有效性和安全性以及为其使用而制定的临床和公共卫生政策的合理问题的重要途径。
+
+十二年前，我们呼吁立即公布临床试验的原始数据。我们现在重申这一呼吁。当试验结果公布、发表或用于证明监管决定的合理性时，数据必须立即可用。在大流行期间，更加没有理由豁免公布数据的的更高要求。公众已通过大量公共研究资助购买了这些疫苗，并且是公众承担了疫苗接种带来的益处和危害的平衡。因此，公众有权利和资格获得这些数据，并由专家对这些数据进行审查。
+
+制药公司在没有对其科学主张进行充分独立审查的情况下获得巨额利润。监管机构的目的不是为了迎合富有的全球公司的节奏并进一步让它们获利，而是为了保护其人民的健康。我们需要所有研究的数据完全透明，为了公共利益，我们需要它，我们现在就需要它！
+
+[往期《雅典娜疫情更新](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)[》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
+
+数据来源：
+[谷歌](https://www.google.com/search?q=covid+case&amp;rlz=1C1ONGR_en-GBAU960AU960&amp;oq=covid+case&amp;aqs=chrome..69i57j69i59j0i402l2j0i131i433i512j0i20i131i263i433i512j0i131i433i512j69i60.1435j0j4&amp;sourceid=chrome&amp;ie=UTF-8)
+[Our world in data](https://ourworldindata.org/coronavirus-data)
+[澳大利亚卫生部网站中共病毒疫苗统计](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/numbers-statistics)
+[澳洲TGA每周疫苗不良反应报告](https://www.tga.gov.au/covid-19-vaccine-safety-monitoring-and-reporting)
+[covidlive.com.au](https://covidlive.com.au/)
+[Booster shot gap to be slashed to four months and then down to three](https://www.news.com.au/lifestyle/health/health-problems/booster-shot-period-to-be-slashed-to-four-and-three-months-as-omicron-fight-ramps-up/news-story/005b2aabba44f2e2b72dac7aa019611d)
+[Coronavirus World Map](https://www.nytimes.com/interactive/2021/world/covid-cases.html)
+
+发布：tianzhihuan
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
