--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 1.24大直播后记: 清风看守所的老师们
+title: 1.24大直播后记：冬奥会是习皇帝的新衣
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1907439/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1907590/)
 
 整理：雅典娜速记组
 编辑：Rianna
@@ -9,11 +9,13 @@ title: 1.24大直播后记: 清风看守所的老师们
 - ![](https://assets.gnews.org/wp-content/uploads/2022/01/BWNK1_1X27NIYGAOUF.png)图片来源：雅典娜农场设计组
 
 
-清风看守所里有幸存的人，还跟郭文贵保持联系。 其中有个幸存者是一位老师，他已经出来了。 当时隔壁号的一个女囚长，当时判了死刑的，不能想象一个判了死刑的女孩，被剃光了头的女性出来以后，跟那位老师结婚了。郭文贵正在说服他这个老师出来直播，他确实年龄大了，确认已经70多岁，郭告诉他你就站出来，跟大家讲讲在咱号里边发生的那些义士，和隔壁我的师母怎么扔这个月经纸过来，就讲讲这一段就行，他笑的都不行！肯定有一天，我们一定会看到他，会很惊讶。 一个这样的人，当年他能出来，而且出来以后发生了很多的事情。这个人不是一般的人，当时是河南大学的一位教授。 被抓起来时候，他是最早发起河南大学支援山东去抗议的，这非常有意思。而且那个师母现在非常棒，有很多时候师母会在网页下面给郭文贵留言。所以说我们这个爆料革命它的魅力就在这里。像这个师母和老师就说，你看现在咱们的这些中国女性站出来，还有中国的男人站出来。 他说在爆料革命最重要的是大家都很开心，他们是最有感觉的，那时候都准备要随时死掉的人，还能活着出来。 现在我们没有什么抱怨的，失去什么的时候都不会觉得有什么了不起；背叛的时候也没有觉得有什么了不起的。为什么？那时候清风看守所里边天天有人举报，今天报告首长有紧急事情就是举报，私下号子（囚室）里边给你讲讲案情，哪个人在外边碰过摸过小姑娘，在外面偷过谁家钱，他就马上举报立功。谁都想立对方的功，立了功以后就可以减刑或者出狱，你知道在里边的背叛文化，没呆过是不懂得，没有比郭文贵看得再透了。都快死的人都快枪毙的人，还立人家功呢！郭文贵曾经有时候跟师母聊天，她说文贵我们最懂你在说啥。想想那些欺民贼伪类还有路大脑袋、什么鸡腿潘他背叛我，跟在看守所比，那数都数不清有多少次被人家立功。 有的人进去以后讲点事会立即举报，一立功就出去了。 知道一举手一立功，马上先给你调号，你一说立功出来，拿着你的被子拿着东西走给你调号。那郭文贵使了这个聪明，他在2，3个月内看谁不顺眼，赶快去立功去，一立功就离开郭文贵那边囚室，不用揍了也不开庭。当时郭文贵的智慧已经很大，能把那狱警、武警玩得团团转。他在看守所把民主自由给整明白了，又把推翻独裁政权和共产党整得更清楚，宗教这一块更厉害：有穆斯林、有天主教、有基督教、佛教、道教都有，怎么可能一个人的囚室里有那么多高人进来？那里边的老师对他带来最大的影响，就是人家老师在恐惧在准备死亡前所有的智慧都更高、更真实。看守所里不但一个还有好几个是被判了监，判了无期20年、15年的都放出来了，都在国内，这个是未来一大场戏。 郭文贵的狱友监友，还有他监狱的老师出来，那有深刻意义。
+这个冬奥会有一个玄机，大家可能是没有注意到的。最近国内媒体出奇地安静，就是宣传方法，大外宣吹狼蛋这个招数都没怎么用；而且不自信不确定谁能来，包括必须公布的外国领导人，所谓的奥运会的欢迎仪式晚宴， 然后搞一些悬念开幕式，这是极大不确定性；媒体上也不自信，还有更重要的事情可以看出它一系列的政策，尝试着去放这个气候导弹弄点雪下来。我们能从这一系列端倪能看出来，习近平本人也不自信开成什么样就和各国勾兑，现在完全也不确定。在开幕式上一些节目，听说到昨天还在改。本来要把习主席、习太阳出来的时候，像当年希特勒一样，一站出来手一伸那个镜头要修改；要把习太阳，像邓小平南巡讲话里边有一个词坚决不能说，就是邓小平一个老人到南边转一圈，然后画了一个圈，这画圈时候不能说，意味着不是他画的。 他认为这是习仲勋画的，所以这句话不能说。特别是对待这次冬奥会开幕式，有一句话不能说，就是党和国家第四代领导人习近平先生要改为党和国家核心领导人，现在是独尊了，真的要独尊了。 而且特别明确的是中国冬奥会将获巨大成功，是改革开放走向新纪元。 新纪元这词很大，新纪元的一个开始。那么另外一个就是现场没有观众，他们要搞出网络上一定会说超过12亿人次的观看，你看这个数据都会出来，一定超过12亿。而且不但超过12亿人看，外国的商家很多赞助厂商都不去了，不到现场转播也去不了，才会说由于病毒和疫苗，以及西方反华势力的搞破坏，给我们社交媒体上带来了巨大关注量，十几亿次看，点赞率是60%、70%可能，甚至80%，然后一系列的支持中国。现在已经派到海外巴基斯坦、古巴、阿富汗、法国、德国和加拿大已经准备好了，到时候会看到采访华人，可以采访路人甲、路人乙全都出来了：“ 我看了北京冬奥会，这简直是太好了，你们做的太好了，你们这个情况下防止疫苗、防止病毒都安排好了。” 从外打内，从内打外，这些事情郭文贵早已知道，看到这些出招以后，他太了解共产党的招数了，这是要给谁看、要叫谁看。第一，篡改历史，要把这个冬奥会去搞成一个无举世无双的，在病毒期间的，被西方打压的，一场重大的成功奥运会。
+
+习近平要让内部中国人民看到在这种情况下，习太阳都能搞这样的冬奥会，那有没有疫苗、有没有病毒那不更厉害了。江泽民、胡锦涛怎么跟我比呀，是不是？完了之后，就真可能就打台湾了。这个是大家也看到的在全世界一切的铺垫。所有人都在讨论冬奥会的时候，乌克兰、台湾将生事端。就像当年的希特勒和苏联一样，所有冬奥会以后，他们判断世界人民对这个国家的好感和政治上的反应是最麻木的，他要行动。
 
 资料来源：郭先生GTV和盖特直播视频。
 
-发布： *tianzhihuan*
+发布：  tianzhihuan
 
 更多资讯，请关注：
 [澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
